--- a/src/doc.tex
+++ b/src/doc.tex
@@ -51,7 +51,8 @@
 \usepackage{longtable}
 \usepackage{fullpage}
 \usepackage{etoc}
-\usepackage{slashbox}
+%\usepackage{slashbox}
+\usepackage{diagbox}
 \usepackage{fancyvrb}
 \usepackage{tabularx}
 
