--- a/src/usr_27.tex
+++ b/src/usr_27.tex
@@ -4,7 +4,7 @@ In chapter 3 a few simple search patterns were mentioned |\hyperref[Simple searc
 Vim can do much more complex searches.
 This chapter explains the most often used ones.
 A detailed specification can be found here: |\verb!:h pattern!|
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1}
 \subsection{Ignoring case}
 By default, Vim's searches are case sensitive.
 Therefore, "include", "INCLUDE", and "Include" are three different words and a search will match only one of them.
