--- a/src/usr_03.tex
+++ b/src/usr_03.tex
@@ -2,13 +2,13 @@
 Before you can insert or delete text the cursor has to be moved to the right
 place.  Vim has a large number of commands to position the cursor.  This
 chapter shows you how to use the most important ones.  You can find a list of
-these commands below |\verb!:h Q_lr!|.
-\localtableofcontentswithrelativedepth{+1} 
+these commands below |\texttt{:h Q_lr}|.
+%\localtableofcontentswithrelativedepth{+1} 
 \subsection{Word movement}
 
 To move the cursor forward one word, use the "w" command.
 Like most Vim commands, you can use a numeric prefix to move past multiple words.
-For example, "\verb!3w!" moves three words.
+For example, "\texttt{3w}" moves three words.
 
 This figure shows how it works:
 
@@ -18,9 +18,9 @@ This figure shows how it works:
        w  w  w    3w
 		\end{Verbatim}
 
-Notice that "\verb!w!" moves to the start of the next word if it already is at the start of a word.
+Notice that "\texttt{w}" moves to the start of the next word if it already is at the start of a word.
 
-The "\verb!b!" command moves backward to the start of the previous word:
+The "\texttt{b}" command moves backward to the start of the previous word:
 
 		\begin{Verbatim}[samepage=true]
     This is a line with example text 
@@ -28,7 +28,7 @@ The "\verb!b!" command moves backward to the start of the previous word:
        b   b b    2b      b
 		\end{Verbatim}
 
-There is also the "\verb!e!" command that moves to the next end of a word and "\verb!ge!", which moves to the previous end of a word:
+There is also the "\texttt{e}" command that moves to the next end of a word and "\texttt{ge}", which moves to the previous end of a word:
 
 		\begin{Verbatim}[samepage=true]
     This is a line with example text 
@@ -36,12 +36,12 @@ There is also the "\verb!e!" command that moves to the next end of a word and "\
        ge    ge     e       e
 		\end{Verbatim}
 
-If you are at the last word of a line, the "\verb!w!" command will take you to the first word in the next line.
+If you are at the last word of a line, the "\texttt{w}" command will take you to the first word in the next line.
 Thus you can use this to move through a paragraph, much faster than using "l".
-"\verb!b!" does the same in the other direction.
+"\texttt{b}" does the same in the other direction.
 
 A word ends at a non-word character, such as a ".", "-" or ")".
-To change what Vim considers to be a word, see the \verb!'iskeyword'! option.
+To change what Vim considers to be a word, see the \texttt{'iskeyword'} option.
 It is also possible to move by white-space separated WORDs.
 This is not a word in the normal sense, that's why the uppercase is used.
 The commands for moving by WORDs are also uppercase, as this figure shows:
@@ -58,10 +58,10 @@ With this mix of lowercase and uppercase commands, you can quickly move forward 
 
 \subsection{Moving to the start or end of a line}
 
-The \verb!"$"! command moves the cursor to the end of a line.
+The \texttt{"$"} command moves the cursor to the end of a line.
 If your keyboard has an <End> key it will do the same thing.
 
-The \verb!"^"! command moves to the first non-blank character of the line.
+The \texttt{"^"} command moves to the first non-blank character of the line.
 The "0" command (zero) moves to the very first character of the line.
 The <Home> key does the same thing.
 In a picture:
@@ -79,17 +79,17 @@ In a picture:
 The "\$" command takes a count, like most movement commands.
 But moving to the end of the line several times doesn't make sense.
 Therefore it causes the editor to move to the end of another line.
-For example, "\verb!1$!" moves you to the end of the first line (the one you're on), "\verb!2$!" to the end of the next line, and so on.
-The "\verb!0!" command doesn't take a count argument, because the "\verb!0!" would be part of the count.
+For example, "\texttt{1$}" moves you to the end of the first line (the one you're on), "\verb!2$!" to the end of the next line, and so on.
+The "\texttt{0}" command doesn't take a count argument, because the "\texttt{0}" would be part of the count.
 Unexpectedly, using a count with "\textasciicircum" doesn't have any effect.
 
 \subsection{Moving to a character}
 One of the most useful movement commands is the single-character search command.
-The command "\verb!fx!" searches forward in the line for the single character x.
-Hint: "\verb!f!" stands for "Find".
+The command "\texttt{fx}" searches forward in the line for the single character x.
+Hint: "\texttt{f}" stands for "Find".
 For example, you are at the beginning of the following line.
 Suppose you want to go to the h of human.
-Just execute the command "\verb!fh!" and the cursor will be positioned over the h:
+Just execute the command "\texttt{fh}" and the cursor will be positioned over the h:
 
 		\begin{Verbatim}[samepage=true]
     To err is human.  To really foul up you need a computer. 
@@ -97,8 +97,8 @@ Just execute the command "\verb!fh!" and the cursor will be positioned over the 
         fh       fy
 		\end{Verbatim}
 
-This also shows that the command "\verb!fy!" moves to the end of the word really.
-You can specify a count; therefore, you can go to the "\verb!l!" of "foul" with "\verb!3fl!":
+This also shows that the command "\texttt{fy}" moves to the end of the word really.
+You can specify a count; therefore, you can go to the "\texttt{l}" of "foul" with "\texttt{3fl}":
 
 		\begin{Verbatim}[samepage=true]
     To err is human.  To really foul up you need a computer. 
@@ -106,7 +106,7 @@ You can specify a count; therefore, you can go to the "\verb!l!" of "foul" with 
                3fl
 		\end{Verbatim}
 
-The "\verb!F!" command searches to the left:
+The "\texttt{F}" command searches to the left:
 
 		\begin{Verbatim}[samepage=true]
     To err is human.  To really foul up you need a computer. 
@@ -114,9 +114,9 @@ The "\verb!F!" command searches to the left:
                     Fh
 		\end{Verbatim}
 
-The "\verb!tx!" command works like the "\verb!fx!" command, except it stops one character before the searched character.
-Hint: "\verb!t!" stands for "To".
-The backward version of this command is "\verb!Tx!".
+The "\texttt{tx}" command works like the "\texttt{fx}" command, except it stops one character before the searched character.
+Hint: "\texttt{t}" stands for "To".
+The backward version of this command is "\texttt{Tx}".
 
 		\begin{Verbatim}[samepage=true]
     To err is human.  To really foul up you need a computer. 
@@ -130,15 +130,15 @@ The cursor is never moved to another line.
 Not even when the sentence continues.
 
 Sometimes you will start a search, only to realize that you have typed the wrong command.
-You type "\verb!f!" to search backward, for example, only to realize that you really meant "\verb!F!".
+You type "\texttt{f}" to search backward, for example, only to realize that you really meant "\texttt{F}".
 To abort a search, press <Esc>.
-So "\verb!f<Esc>!" is an aborted forward search and doesn't do anything.
+So "\texttt{f<Esc>}" is an aborted forward search and doesn't do anything.
 Note: <Esc> cancels most operations, not just searches.
 
 \subsection{Matching a parenthesis}
 
 When writing a program you often end up with nested () constructs.
-Then the "\verb!%!" command is very handy: It moves to the matching paren.
+Then the "\texttt{%}" command is very handy: It moves to the matching paren.
 If the cursor is on a "(" it will move to the matching ")".
 If it's on a ")" it will move to the matching "(".
 
@@ -151,7 +151,7 @@ If it's on a ")" it will move to the matching "(".
 \end{Verbatim}
 
 This also works for [ ] and \{\} pairs.
-(This can be defined with the \verb!'matchpairs'! option.)
+(This can be defined with the \texttt{'matchpairs'} option.)
 
 When the cursor is not on a useful character, "\%" will search forward to find one.
 Thus if the cursor is at the start of the line of the previous example, "\%" will search forward and find the first "(".
@@ -195,9 +195,9 @@ A quick way to go to the start of a file use "gg".
            last line of a file    V
 \end{Verbatim}
 
-Another way to move to a line is using the "\verb!%!" command with a count. 
-For example "\verb!50%!" moves you to halfway the file.
-"\verb!90%!" goes to near the end.
+Another way to move to a line is using the "\texttt{%}" command with a count. 
+For example "\texttt{50%}" moves you to halfway the file.
+"\texttt{90%}" goes to near the end.
 
 The previous assumes that you want to move to a line in the file, no matter if it's currently visible or not.
 What if you want to move to one of the lines you can see?
@@ -223,7 +223,7 @@ Hints: "H" stands for Home, "M" for Middle and "L" for Last.
 To see where you are in a file, there are three ways:
 \begin{enumerate}
 				\item  Use the CTRL-G command.
-								You get a message like this (assuming the \verb!'ruler'! option is off):
+								You get a message like this (assuming the \texttt{'ruler'} option is off):
 								\begin{Verbatim}[samepage=true]
 	"usr_03.txt" line 233 of 650 --35%-- col 45-52 
 								\end{Verbatim}
@@ -233,7 +233,7 @@ To see where you are in a file, there are three ways:
 								For example, "col 2-9".
 								This indicates that the cursor is positioned on the second character, but because character one is a tab, occupying eight spaces worth of columns, the screen column is 9.
 
-				\item  Set the \verb!'number'! option.  This will display a line number in front of
+				\item  Set the \texttt{'number'} option.  This will display a line number in front of
 								every line:
 
 								\begin{Verbatim}[samepage=true]
@@ -246,13 +246,13 @@ To see where you are in a file, there are three ways:
 	:set nonumber
 								\end{Verbatim}
 
-								Since \verb!'number'! is a boolean option, prepending "no" to its name has the effect of switching it off.
+								Since \texttt{'number'} is a boolean option, prepending "no" to its name has the effect of switching it off.
 								A boolean option has only these two values, it is either on or off.
 								Vim has many options.
 								Besides the boolean ones there are options with a numerical value and string options.
 								You will see examples of this where they are used.
 
-				\item  Set the \verb!'ruler'! option.
+				\item  Set the \texttt{'ruler'} option.
 								This will display the cursor position in the lower right corner of the Vim window:
 
 								\begin{Verbatim}[samepage=true]
@@ -261,7 +261,7 @@ To see where you are in a file, there are three ways:
 
 \end{enumerate}
 
-Using the \verb!'ruler'! option has the advantage that it doesn't take much room,
+Using the \texttt{'ruler'} option has the advantage that it doesn't take much room,
 thus there is more space for your text.
 
 \subsection{Scrolling around}
@@ -317,20 +317,20 @@ That's done with the "zz" command.
     +------------------+            +------------------+
 \end{Verbatim}
 
-The "\verb!zt!" command puts the cursor line at the top, "\verb!zb!" at the bottom.
-There are a few more scrolling commands, see |\verb!:h Q_sc!|.
-To always keep a few lines of context around the cursor, use the \verb!'scrolloff'! option.
+The "\texttt{zt}" command puts the cursor line at the top, "\texttt{zb}" at the bottom.
+There are a few more scrolling commands, see |\texttt{:h Q_sc}|.
+To always keep a few lines of context around the cursor, use the \texttt{'scrolloff'} option.
 
 \subsection{Simple searches}
 
-To search for a string, use the "\verb!/string!" command.
+To search for a string, use the "\texttt{/string}" command.
 To find the word include, for example, use the command:
 
  \begin{Verbatim}[samepage=true]
  /include
  \end{Verbatim}
 
-You will notice that when you type the "\verb!/!" the cursor jumps to the last line of the Vim window, like with colon commands.
+You will notice that when you type the "\texttt{/}" the cursor jumps to the last line of the Vim window, like with colon commands.
 That is where you type the word.
 You can press the backspace key (backarrow or <BS>) to make corrections.
 Use the <Left> and <Right> cursor keys when necessary.
@@ -341,32 +341,32 @@ The characters .*[ ]\textasciicircum\%/\textbackslash?\textasciitilde\$ have spe
 If you want to use them in a search you must put a \textbackslash in front of them.
 See below.
 
-To find the next occurrence of the same string use the "\verb!n!" command.
-Use this to find the first \verb!#include! after the cursor:
+To find the next occurrence of the same string use the "\texttt{n}" command.
+Use this to find the first \texttt{#include} after the cursor:
 
  \begin{Verbatim}[samepage=true]
  /#include
  \end{Verbatim}
 
-And then type "\verb!n!" several times.
-You will move to each \verb!#include! in the text.
+And then type "\texttt{n}" several times.
+You will move to each \texttt{#include} in the text.
 You can also use a count if you know which match you want.
-Thus "\verb!3n!" finds the third match.
-Using a count with "\verb!/!" doesn't work.
+Thus "\texttt{3n}" finds the third match.
+Using a count with "\texttt{/}" doesn't work.
 
-The "\verb!?!" command works like "\verb!/!" but searches backwards:
+The "\texttt{?}" command works like "\texttt{/}" but searches backwards:
 
  \begin{Verbatim}[samepage=true]
  ?word
  \end{Verbatim}
 
-The "\verb!N!" command repeats the last search the opposite direction.
-Thus using "\verb!N!" after a "\verb!/!" command search backwards, using "\verb!N!" after "\verb!?!" searches forward.
+The "\texttt{N}" command repeats the last search the opposite direction.
+Thus using "\texttt{N}" after a "\texttt{/}" command search backwards, using "\texttt{N}" after "\texttt{?}" searches forward.
 
 \subsubsection{Ignoring case}
 
 Normally you have to type exactly what you want to find.
-If you don't care about upper or lowercase in a word, set ttexhe \verb!'ignorecase'! option:
+If you don't care about upper or lowercase in a word, set ttexhe \texttt{'ignorecase'} option:
 
  \begin{Verbatim}[samepage=true]
  :set ignorecase
@@ -389,33 +389,33 @@ Suppose you do three searches:
  /three
  \end{Verbatim}
 
-Now let's start searching by typing a simple "\verb!/!" without pressing <Enter>.
+Now let's start searching by typing a simple "\texttt{/}" without pressing <Enter>.
 If you press <Up> (the cursor key), Vim puts "/three" on the command line.
 Pressing <Enter> at this point searches for three.
-If you do not press <Enter>, but press <Up> instead, Vim changes the prompt to "\verb!/two!".
-Another press of <Up> moves you to "\verb!/one!".
+If you do not press <Enter>, but press <Up> instead, Vim changes the prompt to "\texttt{/two}".
+Another press of <Up> moves you to "\texttt{/one}".
 You can also use the <Down> cursor key to move through the history of search commands in the other direction.
 
 If you know what a previously used pattern starts with, and you want to use it again, type that character before pressing <Up>.
-With the previous example, you can type "\verb!/o<Up>!" and Vim will put "\verb!/one!" on the command line.
+With the previous example, you can type "\texttt{/o<Up>}" and Vim will put "\texttt{/one}" on the command line.
 
-The commands starting with "\verb!:!" also have a history.
+The commands starting with "\texttt{:}" also have a history.
 That allows you to recall a previous command and execute it again.
 These two histories are separate.
 
 \subsubsection{Searching for a word in the text}
 
 Suppose you see the word "TheLongFunctionName" in the text and you want to find the next occurrence of it.
-You could type "\verb!/TheLongFunctionName!", but that's a lot of typing.
+You could type "\texttt{/TheLongFunctionName}", but that's a lot of typing.
 And when you make a mistake Vim won't find it.
-There is an easier way: Position the cursor on the word and use the "\verb!*!" command.
+There is an easier way: Position the cursor on the word and use the "\texttt{*}" command.
 Vim will grab the word under the cursor and use it as the search string.
-The "\verb!#!" command does the same in the other direction.
-You can prepend a count: "\verb!3*!" searches for the third occurrence of the word under the cursor.
+The "\texttt{#}" command does the same in the other direction.
+You can prepend a count: "\texttt{3*}" searches for the third occurrence of the word under the cursor.
 
 \subsubsection{Searching for whole words}
 
-If you type "\verb!/the!" it will also match "there".
+If you type "\texttt{/the}" it will also match "there".
 To only find words that end in "the" use:
 
  \begin{Verbatim}[samepage=true]
@@ -424,20 +424,20 @@ To only find words that end in "the" use:
 
 The "\verb!\>"! item is a special marker that only matches at the end of a word.
 Similarly "\verb!\<"! only matches at the begin of a word.
-Thus to search for the word "\verb!the"! only:
+Thus to search for the word "\texttt{the"} only:
 
  \begin{Verbatim}[samepage=true]
  /\<the\>
  \end{Verbatim}
 
 This does not match "there" or "soothe".
-Notice that the "\verb!*!" and "\verb!#!" commands use these start-of-word and end-of-word markers to only find whole words (you can use "\verb!g*!" and "\verb!g#!" to match partial words).
+Notice that the "\texttt{*}" and "\texttt{#}" commands use these start-of-word and end-of-word markers to only find whole words (you can use "\texttt{g*}" and "\texttt{g#}" to match partial words).
 
 \subsubsection{Highlighting matches}
 
-While editing a program you see a variable called "\verb!nr!".
+While editing a program you see a variable called "\texttt{nr}".
 You want to check where it's used.
-You could move the cursor to "\verb!nr!" and use the "\verb!*!" command and press "\verb!n!" to go along all the matches.
+You could move the cursor to "\texttt{nr}" and use the "\texttt{*}" command and press "\texttt{n}" to go along all the matches.
 There is another way.
 Type this command:
 
@@ -445,7 +445,7 @@ Type this command:
  :set hlsearch
  \end{Verbatim}
 
-If you now search for "\verb!nr!", Vim will highlight all matches.
+If you now search for "\texttt{nr}", Vim will highlight all matches.
 That is a very good way to see where the variable is used, without the need to type commands.
 To switch this off:
 
@@ -463,7 +463,7 @@ command.  If you only want to remove the highlighting, use this command:
 This doesn't reset the option.
 Instead, it disables the highlighting.
 As soon as you execute a search command, the highlighting will be used again.
-Also for the "\verb!n!" and "\verb!N!" commands.
+Also for the "\texttt{n}" and "\texttt{N}" commands.
 
 \subsubsection{Tuning searches}
 
@@ -485,7 +485,7 @@ Or type more to change the search string.
 
 This stops the search at the end of the file.
 Or, when you are searching backwards, at the start of the file.
-The \verb!'wrapscan'! option is on by default, thus searching wraps around the end of the file.
+The \texttt{'wrapscan'} option is on by default, thus searching wraps around the end of the file.
 
 \subsubsection{Intermezzo}
 
@@ -510,8 +510,8 @@ Example:
  Go:set hlsearch<Esc>
  \end{Verbatim}
 
-"\verb!G!" moves to the end of the file.
-"\verb!o!" starts a new line, where you type the "\verb!:set!" command.
+"\texttt{G}" moves to the end of the file.
+"\texttt{o}" starts a new line, where you type the "\texttt{:set}" command.
 You end insert mode with <Esc>.
 Then write the file:
 
@@ -519,7 +519,7 @@ Then write the file:
  ZZ
  \end{Verbatim}
 
-If you now start Vim again, the \verb!'hlsearch'! option will already be set.
+If you now start Vim again, the \texttt{'hlsearch'} option will already be set.
 
 \subsection{Simple search patterns}
 \label{Simple search patterns}
@@ -529,16 +529,16 @@ Regular expressions are an extremely powerful and compact way to specify a searc
 Unfortunately, this power comes at a price, because regular expressions are a bit tricky to specify.
 In this section we mention only a few essential ones.
 More about search patterns and commands in chapter 27 |\hyperref[Search commands and patterns]{\texttt{Search commands and patterns}}|.
-You can find the full explanation here: |\verb!:h pattern!|.
+You can find the full explanation here: |\texttt{:h pattern}|.
 
 \subsubsection{Beginning and end of a line}
 
-The \verb!^! character matches the beginning of a line.
+The \texttt{^} character matches the beginning of a line.
 On an English-US keyboard you find it above the 6.
-The pattern "\verb!include!" matches the word include anywhere on the line.
-But the pattern "\verb!^include!" matches the word include only if it is at the beginning of a line.
+The pattern "\texttt{include}" matches the word include anywhere on the line.
+But the pattern "\texttt{^include}" matches the word include only if it is at the beginning of a line.
 The \$ character matches the end of a line.
-Therefore, "\verb!was$!" matches the word was only if it is at the end of a line.
+Therefore, "\texttt{was$}" matches the word was only if it is at the end of a line.
 
 Let's mark the places where "the" matches in this example line with "x"s:
 
@@ -547,27 +547,27 @@ Let's mark the places where "the" matches in this example line with "x"s:
     xxx                       xxx                  xxx
 		\end{Verbatim}
 
-Using "\verb!/the$!" we find this match:
+Using "\texttt{/the$}" we find this match:
 
 		\begin{Verbatim}[samepage=true]
     the solder holding one of the chips melted and the 
                                                    xxx
 		\end{Verbatim}
 
-And with "\verb!/^the!" we find this one:
+And with "\texttt{/^the}" we find this one:
 
 		\begin{Verbatim}[samepage=true]
     the solder holding one of the chips melted and the 
     xxx
 		\end{Verbatim}
 
-You can try searching with "\verb!/^the$!", it will only match a single line consisting of "the".
+You can try searching with "\texttt{/^the$}", it will only match a single line consisting of "the".
 White space does matter here, thus if a line contains a space after the word, like "the ", the pattern will not match.
 
 \subsubsection{Matching any single character}
 
 The . (dot) character matches any existing character.
-For example, the pattern "\verb!c.m!" matches a string whose first character is a c, whose second character is anything, and whose the third character is m.
+For example, the pattern "\texttt{c.m}" matches a string whose first character is a c, whose second character is anything, and whose the third character is m.
 Example:
 
 		\begin{Verbatim}[samepage=true]
@@ -579,7 +579,7 @@ Example:
 \subsubsection{Matching special characters}
 
 If you really want to match a dot, you must avoid its special meaning by putting a backslash before it.
-If you search for "\verb!ter.!", you will find these matches:
+If you search for "\texttt{ter.}", you will find these matches:
 
 		\begin{Verbatim}[samepage=true]
     We use a computer that became the cummin winter. 
@@ -590,7 +590,7 @@ Searching for "\verb!ter\.!" only finds the second match.
 
 \subsection{Using marks}
 
-When you make a jump to a position with the "\verb!G!" command, Vim remembers the position from before this jump.
+When you make a jump to a position with the "\texttt{G}" command, Vim remembers the position from before this jump.
 This position is called a mark.
 To go back where you came from, use this command:
 
@@ -598,17 +598,17 @@ To go back where you came from, use this command:
  ``
  \end{Verbatim}
 
-This \verb!`! is a backtick or open single-quote character.
+This \texttt{`} is a backtick or open single-quote character.
 If you use the same command a second time you will jump back again.
-That's because the \verb!`! command is a jump itself, and the position from before this jump is remembered.
+That's because the \texttt{`} command is a jump itself, and the position from before this jump is remembered.
 
 Generally, every time you do a command that can move the cursor further than within the same line, this is called a jump.
-This includes the search commands "\verb!/!" and "\verb!n!" (it doesn't matter how far away the match is).
+This includes the search commands "\texttt{/}" and "\texttt{n}" (it doesn't matter how far away the match is).
 But not the character searches with "fx" and "tx" or the word movements "w" and "e".
 Also, "j" and "k" are not considered to be a jump.
 Even when you use a count to make them move the cursor quite a long way away.
  
-The \verb!``! command jumps back and forth, between two points.
+The \texttt{``} command jumps back and forth, between two points.
 The CTRL-O command jumps to older positions (Hint: O for older).
 CTRL-I then jumps back to newer positions (Hint: I is just next to O on the keyboard).
 Consider this sequence of commands:
@@ -639,25 +639,25 @@ And to the match for "The" with another CTRL-I.
 Note:
 CTRL-I is the same as <Tab>.
 
-The "\verb!:jumps!" command gives a list of positions you jumped to.
+The "\texttt{:jumps}" command gives a list of positions you jumped to.
 The entry which you used last is marked with a ">".
 
 \subsubsection{Named marks}
 \label{bookmark}
 
 Vim enables you to place your own marks in the text.
-The command "\verb!ma!" marks the place under the cursor as mark a.
+The command "\texttt{ma}" marks the place under the cursor as mark a.
 You can place 26 marks (a through z) in your text.
 You can't see them, it's just a position that Vim remembers.
-To go to a mark, use the command \verb!`{mark}!, where \verb!{mark}! is the mark letter.
+To go to a mark, use the command \texttt{`{mark}}, where \texttt{{mark}} is the mark letter.
 Thus to move to the a mark:
 
  \begin{Verbatim}[samepage=true]
  `a
  \end{Verbatim}
 
-The command \verb!'mark! (single quotation mark, or apostrophe) moves you to the beginning of the line containing the mark.
-This differs from the \verb!`mark! command, which moves you to marked column.
+The command \texttt{'mark} (single quotation mark, or apostrophe) moves you to the beginning of the line containing the mark.
+This differs from the \texttt{`mark} command, which moves you to marked column.
 
 The marks can be very useful when working on two related parts in a file.
 Suppose you have some text near the start of the file you need to look at, while working on some text near the end of the file.
@@ -679,7 +679,7 @@ Now you can move around, and when you want to look at the start of the file, you
  's
  \end{Verbatim}
 
-Then you can use \verb!''! to jump back to where you were, or \verb!'e! to jump to the text
+Then you can use \texttt{''} to jump back to where you were, or \texttt{'e} to jump to the text
 you were working on at the end.
 There is nothing special about using s for start and e for end, they are
 just easy to remember.
@@ -693,10 +693,10 @@ You can use this command to get a list of marks:
 You will notice a few special marks.  These include:
 \begin{center}
 				\begin{tabular}{c c}
-				\verb!''! & The cursor position before doing a jump\\
-				\verb!"! & The cursor position when last editing the file\\
-				\verb![! & Start of the last change\\
-				\verb!]! &   End of the last change\\
+				\texttt{''} & The cursor position before doing a jump\\
+				\texttt{"} & The cursor position when last editing the file\\
+				\texttt{[} & Start of the last change\\
+				\texttt{]} &   End of the last change\\
 \end{tabular}
 \end{center}
 \clearpage
