--- a/src/usr_04.tex
+++ b/src/usr_04.tex
@@ -2,18 +2,18 @@
 This chapter shows you several ways of making corrections and moving text
 around.  It teaches you the three basic ways to change text: operator-motion,
 Visual mode and text objects.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1}
 \subsection{Operators and motions}
 
-In chapter 2 you learned the "\verb!x!" command to delete a single character.
-And using a count: "\verb!4x!" deletes four characters.
+In chapter 2 you learned the "\texttt{x}" command to delete a single character.
+And using a count: "\texttt{4x}" deletes four characters.
 
-The "\verb!dw!" command deletes a word.
-You may recognize the "\verb!w!" command as the move word command.
-In fact, the "\verb!d!" command may be followed by any motion command, and it deletes from the current location to the place where the cursor winds up.
+The "\texttt{dw}" command deletes a word.
+You may recognize the "\texttt{w}" command as the move word command.
+In fact, the "\texttt{d}" command may be followed by any motion command, and it deletes from the current location to the place where the cursor winds up.
 
-The "\verb!4w!" command, for example, moves the cursor over four words.
-The "\verb!d4w!" command deletes four words.
+The "\texttt{4w}" command, for example, moves the cursor over four words.
+The "\texttt{d4w}" command deletes four words.
 
 \begin{Verbatim}[samepage=true]
     To err is human. To really foul up you need a computer. 
@@ -38,8 +38,8 @@ If you use the "e" command to move to the end of a word, Vim guesses that you do
 Whether the character under the cursor is included depends on the command you used to move to that character.
 The reference manual calls this "exclusive" when the character isn't included and "inclusive" when it is.
 
-The "\verb!$!" command moves to the end of a line.
-The "\verb!d$!" command deletes from the cursor to the end of the line.
+The "\texttt{\$}" command moves to the end of a line.
+The "\texttt{d\$}" command deletes from the cursor to the end of the line.
 This is an inclusive motion, thus the last character of the line is included in the delete operation:
 
 \begin{Verbatim}[samepage=true]
@@ -52,15 +52,15 @@ This is an inclusive motion, thus the last character of the line is included in 
 
 There is a pattern here: operator-motion.
 You first type an operator command.
-For example, "\verb!d!" is the delete operator.
-Then you type a motion command like "\verb!4l!" or "\verb!w!".
+For example, "\texttt{d}" is the delete operator.
+Then you type a motion command like "\texttt{4l}" or "\texttt{w}".
 This way you can operate on any text you can move over.
 
 \subsection{Changing text}
 
-Another operator is "\verb!c!", change.
-It acts just like the "\verb!d!" operator, except it leaves you in Insert mode.
-For example, "\verb!cw!" changes a word.
+Another operator is "\texttt{c}", change.
+It acts just like the "\texttt{d}" operator, except it leaves you in Insert mode.
+For example, "\texttt{cw}" changes a word.
 Or more specifically, it deletes a word and then puts you in Insert mode.
 
 \begin{Verbatim}[samepage=true]
@@ -83,20 +83,20 @@ This "\verb!c2wbe<Esc>!" contains these bits:
 
 If you have paid attention, you will have noticed something strange: The space before "human" isn't deleted.
 There is a saying that for every problem there is an answer that is simple, clear, and wrong.
-That is the case with the example used here for the "\verb!cw!" command.
-The c operator works just like the d operator, with one exception: "\verb!cw!".
-It actually works like "\verb!ce!", change to end of word.
+That is the case with the example used here for the "\texttt{cw}" command.
+The c operator works just like the d operator, with one exception: "\texttt{cw}".
+It actually works like "\texttt{ce}", change to end of word.
 Thus the space after the word isn't included.
 This is an exception that dates back to the old Vi.
 Since many people are used to it now, the inconsistency has remained in Vim.
 
 \subsubsection{More changes}
 
-Like "\verb!dd!" deletes a whole line, "\verb!cc!" changes a whole line.
+Like "\texttt{dd}" deletes a whole line, "\texttt{cc}" changes a whole line.
 It keeps the existing indent (leading white space) though.
 
-Just like "\verb!d$!" deletes until the end of the line, "\verb!c$!" changes until the end of the line.
-It's like doing "\verb!d$!" to delete the text and then "\verb!a!" to start Insert mode and append new text.
+Just like "\texttt{d\$}" deletes until the end of the line, "\texttt{c\$}" changes until the end of the line.
+It's like doing "\texttt{d\$}" to delete the text and then "\texttt{a}" to start Insert mode and append new text.
 
 \subsubsection{Shortcuts}
 
@@ -105,28 +105,28 @@ single letter command:
 
 \begin{center}
 \begin{tabular}{c c c}
-				\verb!x! & stands for & \verb!dl!  (delete character under the cursor)\\
-				\verb!X! & stands for & \verb!dh!  (delete character left of the cursor)\\
-				\verb!D! & stands for & \verb!d$!  (delete to end of the line)\\
-				\verb!C! & stands for & \verb!c$!  (change to end of the line)\\
-				\verb!s! & stands for & \verb!cl!  (change one character)\\
-				\verb!S! & stands for & \verb!cc!  (change a whole line)\\
+				\texttt{x} & stands for & \texttt{dl}  (delete character under the cursor)\\
+				\texttt{X} & stands for & \texttt{dh}  (delete character left of the cursor)\\
+				\texttt{D} & stands for & \texttt{d\$}  (delete to end of the line)\\
+				\texttt{C} & stands for & \texttt{c\$}  (change to end of the line)\\
+				\texttt{s} & stands for & \texttt{cl}  (change one character)\\
+				\texttt{S} & stands for & \texttt{cc}  (change a whole line)\\
 \end{tabular}
 \end{center}
 
 \subsubsection{Where to put the count}
 
-The commands "\verb!3dw!" and "\verb!d3w!" delete three words.
-If you want to get really picky about things, the first command, "\verb!3dw!", deletes one word three times; the command "\verb!d3w!" deletes three words once.
+The commands "\texttt{3dw}" and "\texttt{d3w}" delete three words.
+If you want to get really picky about things, the first command, "\texttt{3dw}", deletes one word three times; the command "\texttt{d3w}" deletes three words once.
 This is a difference without a distinction.
 You can actually put in two counts, however.
 For example, "\verb!3d2w!" deletes two words, repeated three times, for a total of six words.
 
 \subsubsection{Replacing with one character}
 
-The "\verb!r!" command is not an operator.
+The "\texttt{r}" command is not an operator.
 It waits for you to type a character, and will replace the character under the cursor with it.
-You could do the same with "\verb!cl!" or with the "\verb!s!" command, but with "\verb!r!" you don't have to press <Esc>
+You could do the same with "\texttt{cl}" or with the "\texttt{s}" command, but with "\texttt{r}" you don't have to press <Esc>
 
 \begin{Verbatim}[samepage=true]
     there is somerhing grong here 
@@ -135,7 +135,7 @@ You could do the same with "\verb!cl!" or with the "\verb!s!" command, but with 
     There is something wrong here 
 \end{Verbatim}
 
-Using a count with "\verb!r!" causes that many characters to be replaced with the same character.
+Using a count with "\texttt{r}" causes that many characters to be replaced with the same character.
 Example:
 
 \begin{Verbatim}[samepage=true]
@@ -145,19 +145,19 @@ Example:
     There is something xxxxx here 
 \end{Verbatim}
 
-To replace a character with a line break use "\verb!r<Enter>!".
+To replace a character with a line break use "\texttt{r<Enter>}".
 This deletes one character and inserts a line break.
-Using a count here only applies to the number of characters deleted: "\verb!4r<Enter>!" replaces four characters with one line break.
+Using a count here only applies to the number of characters deleted: "\texttt{4r<Enter>}" replaces four characters with one line break.
 
 \subsection{Repeating a change}
 
-The "\verb!.!" command is one of the most simple yet powerful commands in Vim.
+The "\texttt{.}" command is one of the most simple yet powerful commands in Vim.
 It repeats the last change.
 For instance, suppose you are editing an HTML file and want to delete all the <B> tags.
-You position the cursor on the first < and delete the <B> with the command "\verb!df>!".
-You then go to the < of the next </B> and kill it using the "\verb!.!" command.
-The "\verb!.!" command executes the last change command (in this case, "\verb!df>!").
-To delete another tag, position the cursor on the < and use the "\verb!.!" command.
+You position the cursor on the first < and delete the <B> with the command "\texttt{df>}".
+You then go to the < of the next </B> and kill it using the "\texttt{.}" command.
+The "\texttt{.}" command executes the last change command (in this case, "\texttt{df>}").
+To delete another tag, position the cursor on the < and use the "\texttt{.}" command.
 
 \begin{Verbatim}[samepage=true]
                         To <B>generate</B> a table of <B>contents 
@@ -169,7 +169,7 @@ To delete another tag, position the cursor on the < and use the "\verb!.!" comma
     .    repeat df>                                   -->
 \end{Verbatim}
 
-The "\verb!.!" command works for all changes you make, except for the "u" (undo),
+The "\texttt{.}" command works for all changes you make, except for the "u" (undo),
 CTRL-R (redo) and commands that start with a colon (:).
 
 Another example: You want to change the word "four" to "five".
@@ -178,12 +178,12 @@ You can do this quickly with this sequence of commands:
 
 \begin{center}
 \begin{tabular}{c l}
-				\verb!/four<Enter>! & find the first string "four"\\
-				\verb!cwfive<Esc>! & change the word to "five"\\
-				\verb!n! & find the next "four"\\
-				\verb!.! & repeat the change to "five"\\
-				\verb!n! & find the next "four"\\
-				\verb!.! & repeat the change\\
+				\texttt{/four<Enter>} & find the first string "four"\\
+				\texttt{cwfive<Esc>} & change the word to "five"\\
+				\texttt{n} & find the next "four"\\
+				\texttt{.} & repeat the change to "five"\\
+				\texttt{n} & find the next "four"\\
+				\texttt{.} & repeat the change\\
 						& etc.
 \end{tabular}
 \end{center}
@@ -194,7 +194,7 @@ To delete simple items the operator-motion changes work quite well.
 But often it's not so easy to decide which command will move over the text you want to change.
 Then you can use Visual mode.
 
-You start Visual mode by pressing "\verb!v!".
+You start Visual mode by pressing "\texttt{v}".
 You move the cursor over the text you want to work on.
 While you do this, the text is highlighted.
 Finally type the operator command.
@@ -215,11 +215,11 @@ If at any time you decide you don't want to do anything with the highlighted tex
  
 \subsubsection{Selecting lines}
 
-If you want to work on whole lines, use "\verb!V!" to start Visual mode.
+If you want to work on whole lines, use "\texttt{V}" to start Visual mode.
 You will see right away that the whole line is highlighted, without moving around.
 When you move left or right nothing changes.
 When you move up or down the selection is extended whole lines at a time.
-For example, select three lines with "\verb!Vjj!":
+For example, select three lines with "\texttt{Vjj}":
 
 \begin{Verbatim}[samepage=true]
                       +------------------------+
@@ -244,32 +244,32 @@ Visual mode.  This is very useful when working on tables.
 
 To delete the middle "Q2" column, move the cursor to the "Q" of "Q2".
 Press CTRL-V to start blockwise Visual mode.
-Now move the cursor three lines down with "\verb!3j!" and to the next word with "\verb!w!".
+Now move the cursor three lines down with "\texttt{3j}" and to the next word with "\texttt{w}".
 You can see the first character of the last column is included.
-To exclude it, use "\verb!h!".
-Now press "\verb!d!" and the middle column is gone.
+To exclude it, use "\texttt{h}".
+Now press "\texttt{d}" and the middle column is gone.
 
 \subsubsection{Going to the other side}
 
-If you have selected some text in Visual mode, and discover that you need to change the other end of the selection, use the "\verb!o!" command (Hint: o for other end).
+If you have selected some text in Visual mode, and discover that you need to change the other end of the selection, use the "\texttt{o}" command (Hint: o for other end).
 The cursor will go to the other end, and you can move the cursor to change where the selection starts.
-Pressing "\verb!o!" again brings you back to the other end.
+Pressing "\texttt{o}" again brings you back to the other end.
 
 When using blockwise selection, you have four corners.
-"\verb!o!" only takes you to one of the other corners, diagonally.
-Use "\verb!O!" to move to the other corner in the same line.
+"\texttt{o}" only takes you to one of the other corners, diagonally.
+Use "\texttt{O}" to move to the other corner in the same line.
 
-Note that "\verb!o!" and "\verb!O!" in Visual mode work very differently from Normal mode, where they open a new line below or above the cursor.
+Note that "\texttt{o}" and "\texttt{O}" in Visual mode work very differently from Normal mode, where they open a new line below or above the cursor.
 
 \subsection{Moving text}
 
-When you delete something with the "\verb!d!", "\verb!x!", or another command, the text is saved.
-You can paste it back by using the \verb:p: command.
+When you delete something with the "\texttt{d}", "\texttt{x}", or another command, the text is saved.
+You can paste it back by using the \texttt{p} command.
 (The Vim name for this is put).
 
 Take a look at how this works.
-First you will delete an entire line, by putting the cursor on the line you want to delete and typing "\verb!dd!".
-Now you move the cursor to where you want to put the line and use the "\verb!p!" (put) command.
+First you will delete an entire line, by putting the cursor on the line you want to delete and typing "\texttt{dd}".
+Now you move the cursor to where you want to put the line and use the "\texttt{p}" (put) command.
 The line is inserted on the line below the cursor.
 
 \begin{Verbatim}[samepage=true]
@@ -278,8 +278,8 @@ The line is inserted on the line below the cursor.
     line 3                       line 2
 \end{Verbatim}
 
-Because you deleted an entire line, the "\verb!p!" command placed the text line below the cursor.
-If you delete part of a line (a word, for instance), the "\verb!p!" command puts it just after the cursor.
+Because you deleted an entire line, the "\texttt{p}" command placed the text line below the cursor.
+If you delete part of a line (a word, for instance), the "\texttt{p}" command puts it just after the cursor.
 
 \begin{Verbatim}[samepage=true]
     Some more boring try text to out commands. 
@@ -295,25 +295,25 @@ If you delete part of a line (a word, for instance), the "\verb!p!" command puts
 
 \subsubsection{More on putting}
 
-The "\verb!P!" command puts text like "\verb!p!", but before the cursor.
-When you deleted a whole line with "\verb!dd!", "\verb!P!" will put it back above the cursor.
-When you deleted a word with "\verb!dw!", "\verb!P!" will put it back just before the cursor.
+The "\texttt{P}" command puts text like "\texttt{p}", but before the cursor.
+When you deleted a whole line with "\texttt{dd}", "\texttt{P}" will put it back above the cursor.
+When you deleted a word with "\texttt{dw}", "\texttt{P}" will put it back just before the cursor.
 
 You can repeat putting as many times as you like.
 The same text will be used.
 
-You can use a count with "\verb!p!" and "\verb!P!".
+You can use a count with "\texttt{p}" and "\texttt{P}".
 The text will be repeated as many times as specified with the count.
-Thus "\verb!dd!" and then "\verb!3p!" puts three copies of the same deleted line.
+Thus "\texttt{dd}" and then "\texttt{3p}" puts three copies of the same deleted line.
 
 \subsubsection{Swapping two characters}
 
 Frequently when you are typing, your fingers get ahead of your brain (or the other way around?).
 The result is a typo such as "teh" for "the".
 Vim makes it easy to correct such problems.
-Just put the cursor on the e of "teh" and execute the command "\verb!xp!".
-This works as follows: "\verb!x!" deletes the character e and places it in a register.
-"\verb!p!" puts the text after the cursor, which is after the h.
+Just put the cursor on the e of "teh" and execute the command "\texttt{xp}".
+This works as follows: "\texttt{x}" deletes the character e and places it in a register.
+"\texttt{p}" puts the text after the cursor, which is after the h.
 
 \begin{Verbatim}[samepage=true]
     teh     th     the 
@@ -322,16 +322,16 @@ This works as follows: "\verb!x!" deletes the character e and places it in a reg
 
 \subsection{Copying text}
 
-To copy text from one place to another, you could delete it, use "\verb!u!" to undo the deletion and then "\verb!p!" to put it somewhere else.
+To copy text from one place to another, you could delete it, use "\texttt{u}" to undo the deletion and then "\texttt{p}" to put it somewhere else.
 There is an easier way: yanking.
-The "\verb!y!" operator copies text into a register.
-Then a "\verb!p!" command can be used to put it.
+The "\texttt{y}" operator copies text into a register.
+Then a "\texttt{p}" command can be used to put it.
 
 Yanking is just a Vim name for copying.
-The "\verb!c!" letter was already used for the change operator, and "\verb!y!" was still available.
-Calling this operator "yank" made it easier to remember to use the "\verb!y!" key.
+The "\texttt{c}" letter was already used for the change operator, and "\texttt{y}" was still available.
+Calling this operator "yank" made it easier to remember to use the "\texttt{y}" key.
 
-Since "\verb!y!" is an operator, you use "\verb!yw!" to yank a word.
+Since "\texttt{y}" is an operator, you use "\texttt{yw}" to yank a word.
 A count is possible as usual.
 To yank two words use "y2w".
 Example:
@@ -347,12 +347,12 @@ Example:
     let sqr = LongVariable * LongVariable 
 \end{Verbatim}
 
-Notice that "\verb!yw!" includes the white space after a word.
-If you don't want this, use "\verb!ye!".
+Notice that "\texttt{yw}" includes the white space after a word.
+If you don't want this, use "\texttt{ye}".
 
-The "\verb!yy!" command yanks a whole line, just like "\verb!dd!" deletes a whole line.
-Unexpectedly, while "\verb!D!" deletes from the cursor to the end of the line, "\verb!Y!" works like "\verb!yy!", it yanks the whole line.
-Watch out for this inconsistency!  Use "\verb!y$!" to yank to the end of the line.
+The "\texttt{yy}" command yanks a whole line, just like "\texttt{dd}" deletes a whole line.
+Unexpectedly, while "\texttt{D}" deletes from the cursor to the end of the line, "\texttt{Y}" works like "\texttt{yy}", it yanks the whole line.
+Watch out for this inconsistency!  Use "\texttt{y\$}" to yank to the end of the line.
 
 		\begin{Verbatim}[samepage=true]
     a text line   yy   a text line        a text line
@@ -379,7 +379,7 @@ The "Copy", "Cut" and "Paste" items are also available in the popup menu (only w
 If your Vim has a toolbar, you can also find these items there.
 
 If you are not using the GUI, or if you don't like using a menu, you have to use another way.
-You use the normal "\verb!y!" (yank) and "\verb!p!" (put) commands, but prepend \verb!"*! (double-quote star) before it.
+You use the normal "\texttt{y}" (yank) and "\texttt{p}" (put) commands, but prepend \texttt{"*} (double-quote star) before it.
 To copy a line to the clipboard:
 
  \begin{Verbatim}[samepage=true]
@@ -393,12 +393,12 @@ To put text from the clipboard back into the text:
  \end{Verbatim}
 
 This only works on versions of Vim that include clipboard support.
-More about the clipboard in section 09.3 and here: |\verb!:h clipboard!|.
+More about the clipboard in section 09.3 and here: |\texttt{:h clipboard}|.
 
 \subsection{Text objects}
 
-If the cursor is in the middle of a word and you want to delete that word, you need to move back to its start before you can do "\verb!dw!".
-There is a simpler way to do this: "\verb!daw!".
+If the cursor is in the middle of a word and you want to delete that word, you need to move back to its start before you can do "\texttt{dw}".
+There is a simpler way to do this: "\texttt{daw}".
 
 \begin{Verbatim}[samepage=true]
     this is some example text. 
@@ -407,10 +407,10 @@ There is a simpler way to do this: "\verb!daw!".
     this is some text. 
 \end{Verbatim}
 
-The "\verb!d!" of "\verb!daw!" is the delete operator.
-"\verb!aw!" is a text object.
-Hint: "\verb!aw!" stands for "A Word".
-Thus "\verb!daw!" is "Delete A Word".
+The "\texttt{d}" of "\texttt{daw}" is the delete operator.
+"\texttt{aw}" is a text object.
+Hint: "\texttt{aw}" stands for "A Word".
+Thus "\texttt{daw}" is "Delete A Word".
 To be precise, the white space after the word is also deleted (the white space before the word at the end of the line).
 
 Using text objects is the third way to make changes in Vim.
@@ -420,7 +420,7 @@ Now we add operator-text object.
 It is very similar to operator-motion, but instead of operating on the text between the cursor position before and after a movement command, the text object is used as a whole.
 It doesn't matter where in the object the cursor was.
 
-To change a whole sentence use "\verb!cis!".
+To change a whole sentence use "\texttt{cis}".
 Take this text:
 
 \begin{Verbatim}[samepage=true]
@@ -430,7 +430,7 @@ Take this text:
 \end{Verbatim}
 
 Move to the start of the second line, on "is an".
-Now use "\verb!cis!":
+Now use "\texttt{cis}":
 
 \begin{Verbatim}[samepage=true]
     Hello there.    Just 
@@ -445,26 +445,26 @@ Now you type the new sentence "Another line.":
     some text. 
 \end{Verbatim}
 
-"\verb!cis!" consists of the "c" (change) operator and the "is" text object.
+"\texttt{cis}" consists of the "c" (change) operator and the "is" text object.
 This stands for "Inner Sentence".
 There is also the "as" (a sentence) object.
 The difference is that "as" includes the white space after the sentence and "is" doesn't.
-If you would delete a sentence, you want to delete the white space at the same time, thus use "\verb!das!".
-If you want to type new text the white space can remain, thus you use "\verb!cis!".
+If you would delete a sentence, you want to delete the white space at the same time, thus use "\texttt{das}".
+If you want to type new text the white space can remain, thus you use "\texttt{cis}".
 
 You can also use text objects in Visual mode.
 It will include the text object in the Visual selection.
 Visual mode continues, thus you can do this several times.
-For example, start Visual mode with "\verb!v!" and select a sentence with "\verb!as!".
-Now you can repeat "\verb!as!" to include more sentences.
+For example, start Visual mode with "\texttt{v}" and select a sentence with "\texttt{as}".
+Now you can repeat "\texttt{as}" to include more sentences.
 Finally you use an operator to do something with the selected sentences.
 
-You can find a long list of text objects here: |\verb!:h text-objects!|.
+You can find a long list of text objects here: |\texttt{:h text-objects}|.
 
 \subsection{Replace mode}
 \label{Replace mode}
 
-The "\verb!R!" command causes Vim to enter replace mode.
+The "\texttt{R}" command causes Vim to enter replace mode.
 In this mode, each character you type replaces the one under the cursor.
 This continues until you type <Esc>.
 
@@ -478,7 +478,7 @@ In this example you start Replace mode on the first "t" of "text":
 \end{Verbatim}
 
 You may have noticed that this command replaced 5 characters in the line with twelve others.
-The "\verb!R!" command automatically extends the line if it runs out of characters to replace.
+The "\texttt{R}" command automatically extends the line if it runs out of characters to replace.
 It will not continue on the next line.
 
 You can switch between Insert mode and Replace mode with the <Insert> key.
@@ -491,15 +491,15 @@ Thus it works like an undo command for the last typed character.
 The operators, movement commands and text objects give you the possibility to make lots of combinations.
 Now that you know how it works, you can use N operators with M movement commands to make N * M commands!
 
-You can find a list of operators here: |\verb!:h operator!|
+You can find a list of operators here: |\texttt{:h operator}|
 
 For example, there are many other ways to delete pieces of text.
 Here are a few often used ones:
 
 \begin{longtable}{l l}
-				x & delete character under the cursor (short for "\verb!dl!") \\
-				X & delete character before the cursor (short for "\verb!dh!") \\
-				D & delete from cursor to end of line (short for "\verb!d$!") \\
+				x & delete character under the cursor (short for "\texttt{dl}") \\
+				X & delete character before the cursor (short for "\texttt{dh}") \\
+				D & delete from cursor to end of line (short for "\texttt{d\$}") \\
 				dw & delete from cursor to next start of word \\
 				db & delete from cursor to previous start of word \\
 				diw & delete word under the cursor (excluding white space) \\
@@ -508,16 +508,16 @@ Here are a few often used ones:
 				dgg & delete until the start of the file \\
 \end{longtable}
 
-If you use "\verb!c!" instead of "\verb!d!" they become change commands.
-And with "\verb!y!" you yank the text.
+If you use "\texttt{c}" instead of "\texttt{d}" they become change commands.
+And with "\texttt{y}" you yank the text.
 And so forth.
 
 There are a few often used commands to make changes that didn't fit somewhere else:
 
-\begin{tabularx}{\textwidth}{c X}
+\begin{tabularx}{\textwidth}{l X}
 				\textasciitilde & 
 				change case of the character under the cursor, and move the cursor to the next character.
-				This is not an operator (unless \verb!'tildeop'! is set), thus you can't use it with a motion command.
+				This is not an operator (unless \texttt{'tildeop'} is set), thus you can't use it with a motion command.
 				It does work in Visual mode and changes case for all the selected text then. \\
 
 				\texttt{I} &
