--- a/src/usr_07.tex
+++ b/src/usr_07.tex
@@ -2,7 +2,7 @@
 No matter how many files you have, you can edit them without leaving Vim.
 Define a list of files to work on and jump from one to the other.
 Copy text from one file and put it in another one.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1}
 \subsection{Edit another file}
 
 So far you had to start Vim for every file you wanted to edit.
@@ -13,7 +13,7 @@ To start editing another file, use this command:
  :edit foo.txt
  \end{Verbatim}
 
-You can use any file name instead of "\verb!foo.txt!".
+You can use any file name instead of "\texttt{foo.txt}".
 Vim will close the current file and open the new one.
 If the current file has unsaved changes, however, Vim displays an error message and does not open the new file:
 
@@ -37,7 +37,7 @@ You can write the file using this command:
  :write
  \end{Verbatim}
 
-Or you can force Vim to discard your changes and edit the new file, using the force (\verb:!:) character:
+Or you can force Vim to discard your changes and edit the new file, using the force (\texttt{!:) character}
 
  \begin{Verbatim}[samepage=true]
  :edit! foo.txt
@@ -67,8 +67,8 @@ After you have done your thing in this file, to edit the next file you use this 
  :next
  \end{Verbatim}
 
-If you have unsaved changes in the current file, you will get an error message and the "\verb!:next!" will not work.
-This is the same problem as with "\verb!:edit!" mentioned in the previous section.
+If you have unsaved changes in the current file, you will get an error message and the "\texttt{:next}" will not work.
+This is the same problem as with "\texttt{:edit}" mentioned in the previous section.
 To abandon the changes:
 
  \begin{Verbatim}[samepage=true]
@@ -109,7 +109,7 @@ The output might look like this:
 						\end{Verbatim}
 
 These are the files you started Vim with.
-The one you are currently editing, "\verb!two.c!", is in square brackets.
+The one you are currently editing, "\texttt{two.c}", is in square brackets.
 
 \subsubsection{Moving to other arguments}
 To go back one file:
@@ -118,7 +118,7 @@ To go back one file:
  :previous
  \end{Verbatim}
 
-This is just like the "\verb!:next!" command, except that it moves in the other direction.
+This is just like the "\texttt{:next}" command, except that it moves in the other direction.
 Again, there is a shortcut command for when you want to write the file first:
 
  \begin{Verbatim}[samepage=true]
@@ -137,9 +137,9 @@ And to move back to the first one again:
  :first
  \end{Verbatim}
 
-There is no "\verb!:wlast!" or "\verb!:wfirst!" command though!
+There is no "\texttt{:wlast}" or "\texttt{:wfirst!" command though}
 
-You can use a count for "\verb!:next!" and "\verb!:previous!".
+You can use a count for "\texttt{:next}" and "\texttt{:previous}".
 To skip two files forward:
 
  \begin{Verbatim}[samepage=true]
@@ -147,7 +147,7 @@ To skip two files forward:
  \end{Verbatim}
 
 \subsubsection{Automatic writing}
-When moving around the files and making changes, you have to remember to use "\verb!:write!".
+When moving around the files and making changes, you have to remember to use "\texttt{:write}".
 Otherwise you will get an error message.
 If you are sure you always want to write modified files, you can tell Vim to automatically write them:
 
@@ -176,7 +176,7 @@ Or use a wildcard, like it's used in the shell:
  \end{Verbatim}
 
 Vim will take you to the first file in the list.
-Again, if the current file has changes, you can either write the file first, or use "\verb!:args!!" (with !  added) to abandon the changes.
+Again, if the current file has changes, you can either write the file first, or use "\texttt{:args!!" (with }  added) to abandon the changes.
 
 DID YOU EDIT THE LAST FILE?
 \phantomsection
@@ -193,7 +193,7 @@ If you really want to exit, just do it again.
 Then it will work (but not when you did other commands in between).
 
 \subsection{Jumping from file to file}
-To quickly jump between two files, press \verb!CTRL-^!  (on English-US keyboards the \^  is above the 6 key).
+To quickly jump between two files, press \texttt{CTRL-^}  (on English-US keyboards the \^  is above the 6 key).
 Example:
 
  \begin{Verbatim}[samepage=true]
@@ -206,22 +206,22 @@ You are now in one.c.
  :next
  \end{Verbatim}
 
-Now you are in \verb!two.c!.
-Now use \verb!CTRL-^! to go back to \verb!one.c!.
-Another \verb!CTRL-^! and you are back in \verb!two.c!.
-Another \verb!CTRL-^! and you are in \verb!one.c! again.
+Now you are in \texttt{two.c}.
+Now use \texttt{CTRL-^} to go back to \texttt{one.c}.
+Another \texttt{CTRL-^} and you are back in \texttt{two.c}.
+Another \texttt{CTRL-^} and you are in \texttt{one.c} again.
 If you now do:
 
  \begin{Verbatim}[samepage=true]
  :next
  \end{Verbatim}
 
-You are in \verb!three.c!.
-Notice that the \verb!CTRL-^! command does not change the idea of where you are in the list of files.
-Only commands like "\verb!:next!" and "\verb!:previous!" do that.
+You are in \texttt{three.c}.
+Notice that the \texttt{CTRL-^} command does not change the idea of where you are in the list of files.
+Only commands like "\texttt{:next}" and "\texttt{:previous}" do that.
 
 The file you were previously editing is called the "alternate" file.
-When you just started Vim \verb!CTRL-^! will not work, since there isn't a previous file.
+When you just started Vim \texttt{CTRL-^} will not work, since there isn't a previous file.
 
 \subsubsection{Predefined marks}
 After jumping to another file, you can use two predefined marks which are very useful:
@@ -237,38 +237,38 @@ Another mark that is remembered is the position where you made the last change:
  `.
  \end{Verbatim}
 
-Suppose you are editing the file "\verb!one.txt!".
-Somewhere halfway the file you use "\verb!x!" to delete a character.
-Then you go to the last line with "\verb!G!" and write the file with "\verb!:w!".
-You edit several other files, and then use "\verb!:edit one.txt!" to come back to "\verb!one.txt!".
-If you now use \verb!`"! Vim jumps to the last line of the file.
-Using \verb!`.! takes you to the position where you deleted the character.
-Even when you move around in the file \verb!`"! and \verb!`.! will take you to the remembered position.
+Suppose you are editing the file "\texttt{one.txt}".
+Somewhere halfway the file you use "\texttt{x}" to delete a character.
+Then you go to the last line with "\texttt{G}" and write the file with "\texttt{:w}".
+You edit several other files, and then use "\texttt{:edit one.txt}" to come back to "\texttt{one.txt}".
+If you now use \texttt{`"} Vim jumps to the last line of the file.
+Using \texttt{`.} takes you to the position where you deleted the character.
+Even when you move around in the file \texttt{`"} and \texttt{`.} will take you to the remembered position.
 At least until you make another change or leave the file.
 
 \subsubsection{File marks}
-In chapter 4 was explained how you can place a mark in a file with "\verb!mx!" and jump to that position with "\verb!`x!".
+In chapter 4 was explained how you can place a mark in a file with "\texttt{mx}" and jump to that position with "\texttt{`x}".
 That works within one file.
 If you edit another file and place marks there, these are specific for that file.
 Thus each file has its own set of marks, they are local to the file.
 
 So far we were using marks with a lowercase letter.  There are also marks
 with an uppercase letter.  These are global, they can be used from any file.
-For example suppose that we are editing the file "\verb!foo.txt!".  Go to halfway the
-file ("\verb!50%!") and place the F mark there (F for foo):
+For example suppose that we are editing the file "\texttt{foo.txt}".  Go to halfway the
+file ("\texttt{50%}") and place the F mark there (F for foo):
 
  \begin{Verbatim}[samepage=true]
  50%mF
  \end{Verbatim}
 
-Now edit the file "\verb!bar.txt!" and place the B mark (B for bar) at its last line:
+Now edit the file "\texttt{bar.txt}" and place the B mark (B for bar) at its last line:
 
  \begin{Verbatim}[samepage=true]
  GmB
  \end{Verbatim}
 
-Now you can use the "\verb!'F!" command to jump back to halfway foo.txt.
-Or edit yet another file, type "\verb!'B!" and you are at the end of \verb!bar.txt! again.
+Now you can use the "\texttt{'F}" command to jump back to halfway foo.txt.
+Or edit yet another file, type "\texttt{'B}" and you are at the end of \texttt{bar.txt} again.
 
 The file marks are remembered until they are placed somewhere else.
 Thus you can place the mark, do hours of editing and still be able to jump back to that mark.
@@ -276,7 +276,7 @@ Thus you can place the mark, do hours of editing and still be able to jump back 
 It's often useful to think of a simple connection between the mark letter and where it is placed.
 For example, use the H mark in a header file, M in a Makefile and C in a C code file.
 
-To see where a specific mark is, give an argument to the "\verb!:marks!" command:
+To see where a specific mark is, give an argument to the "\texttt{:marks}" command:
 
  \begin{Verbatim}[samepage=true]
  :marks M
@@ -299,22 +299,22 @@ If you want to have one, all you need to do is execute the following command:
  :set backup
  \end{Verbatim}
 
-The name of the backup file is the original file with a  \verb!~!  added to the end.
-If your file is named \verb!data.txt!, for example, the backup file name is \verb!data.txt~!.
+The name of the backup file is the original file with a  \texttt{~}  added to the end.
+If your file is named \texttt{data.txt}, for example, the backup file name is \texttt{data.txt~}.
 
-If you do not like the fact that the backup files end with \verb!~!, you can change the extension:
+If you do not like the fact that the backup files end with \texttt{~}, you can change the extension:
 
  \begin{Verbatim}[samepage=true]
  :set backupext=.bak
  \end{Verbatim}
 
-This will use \verb!data.txt.bak! instead of \verb!data.txt~!.
+This will use \texttt{data.txt.bak} instead of \texttt{data.txt~}.
 
-Another option that matters here is \verb!'backupdir'!.
+Another option that matters here is \texttt{'backupdir'}.
 It specifies where the backup file is written.
 The default, to write the backup in the same directory as the original file, will mostly be the right thing.
 
-Note: When the \verb!'backup'! option isn't set but the \verb!'writebackup'! is, Vim will still create a backup file.
+Note: When the \texttt{'backup'} option isn't set but the \texttt{'writebackup'} is, Vim will still create a backup file.
 However, it is deleted as soon as writing the file was completed successfully.
 This functions as a safety against losing your original file when writing fails in some way (disk full is the most common cause; being hit by lightning might be another, although less common).
 
@@ -323,7 +323,7 @@ If you are editing source files, you might want to keep the file before you make
 But the backup file will be overwritten each time you write the file.
 Thus it only contains the previous version, not the first one.
 
-To make Vim keep the original file, set the \verb!'patchmode'! option.
+To make Vim keep the original file, set the \texttt{'patchmode'} option.
 This specifies the extension used for the first backup of a changed file.
 Usually you would do this:
 
@@ -331,20 +331,20 @@ Usually you would do this:
  :set patchmode=.orig
  \end{Verbatim}
 
-When you now edit the file data.txt for the first time, make changes and write the file, Vim will keep a copy of the unchanged file under the name "\verb!data.txt.orig!".
+When you now edit the file data.txt for the first time, make changes and write the file, Vim will keep a copy of the unchanged file under the name "\texttt{data.txt.orig}".
 
 If you make further changes to the file, Vim will notice that "data.txt.orig" already exists and leave it alone.
-Further backup files will then be called "data.txt~" (or whatever you specified with \verb!'backupext'!).
+Further backup files will then be called "data.txt~" (or whatever you specified with \texttt{'backupext'}).
 
-If you leave \verb!'patchmode'! empty (that is the default), the original file will not be kept.
+If you leave \texttt{'patchmode'} empty (that is the default), the original file will not be kept.
 
 \subsection{Copy text between files}
 This explains how to copy text from one file to another.
 Let's start with a simple example.
 Edit the file that contains the text you want to copy.
-Move the cursor to the start of the text and press "\verb!v!".
+Move the cursor to the start of the text and press "\texttt{v}".
 This starts Visual mode.
-Now move the cursor to the end of the text and press "\verb!y!".
+Now move the cursor to the end of the text and press "\texttt{y}".
 This yanks (copies) the selected text.
 
 To copy the above paragraph, you would do:
@@ -357,7 +357,7 @@ To copy the above paragraph, you would do:
 
 Now edit the file you want to put the text in.
 Move the cursor to the character where you want the text to appear after.
-Use "\verb!p!" to put the text there.
+Use "\texttt{p}" to put the text there.
 
  \begin{Verbatim}[samepage=true]
  :edit otherfile
@@ -366,12 +366,12 @@ Use "\verb!p!" to put the text there.
  \end{Verbatim}
 
 Of course you can use many other commands to yank the text.
-For example, to select whole lines start Visual mode with "\verb!V!".
+For example, to select whole lines start Visual mode with "\texttt{V}".
 Or use CTRL-V to select a rectangular block.
-Or use "\verb!Y!" to yank a single line, "\verb!yaw!" to yank-a-word, etc.
+Or use "\texttt{Y}" to yank a single line, "\texttt{yaw}" to yank-a-word, etc.
 
-The "\verb!p!" command puts the text after the cursor.
-Use "\verb!P!" to put the text before the cursor.
+The "\texttt{p}" command puts the text after the cursor.
+Use "\texttt{P}" to put the text before the cursor.
 Notice that Vim remembers if you yanked a whole line or a block, and puts it back that way.
 
 \subsubsection{Using registers}
@@ -386,11 +386,11 @@ Let's copy a sentence to the f register (f for First):
  "fyas
  \end{Verbatim}
 
-The "\verb!yas!" command yanks a sentence like before.
-It's the \verb!"f! that tells Vim the text should be place in the f register.
+The "\texttt{yas}" command yanks a sentence like before.
+It's the \texttt{"f} that tells Vim the text should be place in the f register.
 This must come just before the yank command.
 
-Now yank three whole lines to the \verb:l: register (l for line):
+Now yank three whole lines to the \texttt{l: register (l for line)}
 
  \begin{Verbatim}[samepage=true]
  "l3Y
@@ -403,9 +403,9 @@ To yank a block of text to the b (for block) register:
  CTRL-Vjjww"by
  \end{Verbatim}
 
-Notice that the register specification \verb!"b! is just before the "\verb!y!" command.
+Notice that the register specification \texttt{"b} is just before the "\texttt{y}" command.
 This is required.
-If you would have put it before the "\verb!w!" command, it would not have worked.
+If you would have put it before the "\texttt{w}" command, it would not have worked.
 
 Now you have three pieces of text in the f, l and b registers.
 Edit another file, move around and place the text where you want it:
@@ -414,7 +414,7 @@ Edit another file, move around and place the text where you want it:
  "fp
  \end{Verbatim}
 
-Again, the register specification \verb!"f! comes before the "\verb!p!" command.
+Again, the register specification \texttt{"f} comes before the "\texttt{p}" command.
 
 You can put the registers in any order.
 And the text stays in the register until you yank something else into it.
@@ -428,7 +428,7 @@ For example, to delete-a-word and write it in the w register:
  "wdaw
  \end{Verbatim}
 
-Again, the register specification comes before the delete command "\verb!d!".
+Again, the register specification comes before the delete command "\texttt{d}".
 
 \subsubsection{Appending to a file}
 When collecting lines of text into one file, you can use this command:
@@ -443,12 +443,12 @@ This avoids that you have to copy the lines, edit the log file and put them ther
 Thus you save two steps.
 But you can only append to the end of a file.
 
-To append only a few lines, select them in Visual mode before typing "\verb!:write!".
+To append only a few lines, select them in Visual mode before typing "\texttt{:write}".
 In chapter 10 you will learn other ways to select a range of lines.
 
 \subsection{Viewing a file}
 Sometimes you only want to see what a file contains, without the intention to ever write it back.
-There is the risk that you type "\verb!:w!" without thinking and overwrite the original file anyway.
+There is the risk that you type "\texttt{:w}" without thinking and overwrite the original file anyway.
 To avoid this, edit the file read-only.
 
 To start Vim in readonly mode, use this command:
@@ -464,7 +464,7 @@ On Unix this command should do the same thing:
  \end{Verbatim}
 
 You are now editing "file" in read-only mode.
-When you try using "\verb!:w!" you will get an error message and the file won't be written.
+When you try using "\texttt{:w}" you will get an error message and the file won't be written.
 
 When you try to make a change to the file Vim will give you a warning:
 
@@ -511,15 +511,15 @@ You know that you already have a program that copies a file, thus you start with
 
 You can delete the stuff you don't need.
 Now you need to save the file under a new name.
-The "\verb!:saveas!" command can be used for this:
+The "\texttt{:saveas}" command can be used for this:
 
  \begin{Verbatim}[samepage=true]
  :saveas move.c
  \end{Verbatim}
 
 Vim will write the file under the given name, and edit that file.
-Thus the next time you do "\verb!:write!", it will write "\verb!move.c!".
-"\verb!copy.c!" remains unmodified.
+Thus the next time you do "\texttt{:write}", it will write "\texttt{move.c}".
+"\texttt{copy.c}" remains unmodified.
 
 When you want to change the name of the file you are editing, but don't want to write the file, you can use this command:
 
