--- a/src/usr_08.tex
+++ b/src/usr_08.tex
@@ -3,7 +3,7 @@ Display two different files above each other.
 Or view two locations in the file at the same time.
 See the difference between two files by putting them side by side.
 All this is possible with split windows.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1}
 \subsection{Split a window}
 
 The easiest way to open a new window is to use the following command:
@@ -28,7 +28,7 @@ This command splits the screen into two windows and leaves the cursor in the top
 \end{Verbatim}
 
 What you see here is two windows on the same file.
-The line with "\verb!====!" is that status line.
+The line with "\texttt{====}" is that status line.
 It displays information about the window above it.
 (In practice the status line will be in reverse video.)
 
@@ -48,7 +48,7 @@ To close a window, use the command:
  \end{Verbatim}
 
 Actually, any command that quits editing a file works, like ":quit" and "ZZ".
-But "\verb!:close!" prevents you from accidentally exiting Vim when you close the last window.
+But "\texttt{:close}" prevents you from accidentally exiting Vim when you close the last window.
 
 \subsubsection{Closing all other windows}
 
@@ -68,7 +68,7 @@ The following command opens a second window and starts editing the given file:
  :split two.c
  \end{Verbatim}
 
-If you were editing \verb!one.c!, then the result looks like this:
+If you were editing \texttt{one.c}, then the result looks like this:
 
 \begin{Verbatim}[samepage=true]
     +----------------------------------+
@@ -89,10 +89,10 @@ To open a window on a new, empty file, use this:
  :new
  \end{Verbatim}
 
-You can repeat the "\verb!:split!" and "\verb!:new!" commands to create as many windows as you like.
+You can repeat the "\texttt{:split}" and "\texttt{:new}" commands to create as many windows as you like.
 
 \subsection{Window size}
-The "\verb!:split!" command can take a number argument.
+The "\texttt{:split}" command can take a number argument.
 If specified, this will be the height of the new window.
 For example, the following opens a new window three lines high and starts editing the file alpha.c:
 
@@ -116,7 +116,7 @@ To decrease it:
  \end{Verbatim}
 
 Both of these commands take a count and increase or decrease the window size by that many lines.
-Thus "\verb!4 CTRL-W +!" make the window four lines higher.
+Thus "\texttt{4 CTRL-W +}" make the window four lines higher.
 
 To set the window height to a specified number of lines:
 
@@ -124,7 +124,7 @@ To set the window height to a specified number of lines:
  {height}CTRL-W _
  \end{Verbatim}
 
-That's: a number \verb!{height},! CTRL-W and then an underscore (the - key with Shift on English-US keyboards).
+That's: a number \texttt{{height},} CTRL-W and then an underscore (the - key with Shift on English-US keyboards).
 
 To make a window as high as it can be, use the CTRL-W \_ command without a count.
 
@@ -137,14 +137,14 @@ Now press the left mouse button and drag.
 The status line will move, thus making the window on one side higher and the other smaller.
 
 \subsubsection{Options}
-The \verb!'winheight'! option can be set to a minimal desired height of a window and \verb!'winminheight'! to a hard minimum height.
+The \texttt{'winheight'} option can be set to a minimal desired height of a window and \texttt{'winminheight'} to a hard minimum height.
 
-Likewise, there is \verb!'winwidth'! for the minimal desired width and \verb!'winminwidth'! for the hard minimum width.
+Likewise, there is \texttt{'winwidth'} for the minimal desired width and \texttt{'winminwidth'} for the hard minimum width.
 
-The \verb!'equalalways'! option, when set, makes Vim equalize the windows sizes when a window is closed or opened.
+The \texttt{'equalalways'} option, when set, makes Vim equalize the windows sizes when a window is closed or opened.
 
 \subsection{Vertical splits}
-The "\verb!:split!" command creates the new window above the current one.
+The "\texttt{:split}" command creates the new window above the current one.
 To make the window appear at the left side, use:
 
  \begin{Verbatim}[samepage=true]
@@ -169,18 +169,18 @@ The result looks something like this:
     +--------------------------------------+
 \end{Verbatim}
 
-Actually, the \verb!|! lines in the middle will be in reverse video.
+Actually, the \texttt{|} lines in the middle will be in reverse video.
 This is called the vertical separator.
 It separates the two windows left and right of it.
 
-There is also the "\verb!:vnew!" command, to open a vertically split window on a new, empty file.
+There is also the "\texttt{:vnew}" command, to open a vertically split window on a new, empty file.
 Another way to do this:
 
  \begin{Verbatim}[samepage=true]
  :vertical new
  \end{Verbatim}
 
-The "\verb!:vertical!" command can be inserted before another command that splits a window.
+The "\texttt{:vertical}" command can be inserted before another command that splits a window.
 This will cause that command to split the window vertically instead of horizontally.
 (If the command doesn't split a window, it works unmodified.)
 
@@ -202,7 +202,7 @@ Then you can use these commands to move between them:
 You will notice the same letters as used for moving the cursor.
 And the cursor keys can also be used, if you like.
 
-More commands to move to other windows: |\verb!:h Q_wi!|.
+More commands to move to other windows: |\texttt{:h Q_wi}|.
 \subsection{Moving windows}
 You have split a few windows, but now they are in the wrong place.
 Then you need a command to move the window somewhere else.
@@ -286,7 +286,7 @@ A quicker way is using this command:
 This stands for "quit all".
 If any of the windows contain changes, Vim will not exit.
 The cursor will automatically be positioned in a window with changes.
-You can then either use "\verb!:write!" to save the changes, or "\verb!:quit!!" to throw them away.
+You can then either use "\texttt{:write}" to save the changes, or "\texttt{:quit!}" to throw them away.
 
 If you know there are windows with changes, and you want to save all these changes, use this command:
 
@@ -298,7 +298,7 @@ This stands for "write all".
 But actually, it only writes files with changes.
 Vim knows it doesn't make sense to write files that were not changed.
 
-And then there is the combination of "\verb!:qall!" and "\verb!:wall!": the "write and quit all" command:
+And then there is the combination of "\texttt{:qall}" and "\texttt{:wall}": the "write and quit all" command:
 
  \begin{Verbatim}[samepage=true]
  :wqall
@@ -339,14 +339,14 @@ This results in:
 
 The "-O" argument is used to get vertically split windows.
 
-When Vim is already running, the "\verb!:all!" command opens a window for each file in the argument list.  "\verb!:vertical all!" does it with vertical splits.
+When Vim is already running, the "\texttt{:all}" command opens a window for each file in the argument list.  "\texttt{:vertical all}" does it with vertical splits.
 
 \subsection{Viewing differences with vimdiff}
 \label{Viewing differences with vimdiff}
 
 There is a special way to start Vim, which shows the differences between two files.
 Let's take a file "main.c" and insert a few characters in one line.
-Write this file with the \verb!'backup'! option set, so that the backup file "\verb!main.c~!" will contain the previous version of the file.
+Write this file with the \texttt{'backup'} option set, so that the backup file "\texttt{main.c~}" will contain the previous version of the file.
 
 Type this command in a shell (not in Vim):
 
@@ -382,41 +382,41 @@ You will only see the line in which you added characters, and a few lines above 
 
 The lines that were not modified have been collapsed into one line.
 This is called a closed fold.
-They are indicated in the picture with "\verb!<- fold!".
+They are indicated in the picture with "\texttt{<- fold}".
 Thus the single fold line at the top stands for 123 text lines.
 These lines are equal in both files.
 
-The line marked with "\verb!<- changed line!" is highlighted, and the inserted text is displayed with another color.
+The line marked with "\texttt{<- changed line}" is highlighted, and the inserted text is displayed with another color.
 This clearly shows what the difference is between the two files.
 
-The line that was deleted is displayed with "\verb!---!" in the main.c window.
-See the "\verb!<- deleted line!" marker in the picture.
+The line that was deleted is displayed with "\texttt{---}" in the main.c window.
+See the "\texttt{<- deleted line}" marker in the picture.
 These characters are not really there.
-They just fill up \verb!main.c!, so that it displays the same number of lines as the other window.
+They just fill up \texttt{main.c}, so that it displays the same number of lines as the other window.
 
 \subsubsection{The fold column}
 Each window has a column on the left with a slightly different background.
-In the picture above these are indicated with "\verb!VV!".
+In the picture above these are indicated with "\texttt{VV}".
 You notice there is a plus character there, in front of each closed fold.
 Move the mouse pointer to that plus and click the left button.
 The fold will open, and you can see the text that it contains.
 
 The fold column contains a minus sign for an open fold.
-If you click on this \verb!-!, the fold will close.
+If you click on this \texttt{-}, the fold will close.
 
 Obviously, this only works when you have a working mouse.
-You can also use "\verb!zo!" to open a fold and "\verb!zc!" to close it.
+You can also use "\texttt{zo}" to open a fold and "\texttt{zc}" to close it.
 
 \subsubsection{Diffing in vim}
 Another way to start in diff mode can be done from inside Vim.
-Edit the "\verb!main.c!" file, then make a split and show the differences:
+Edit the "\texttt{main.c}" file, then make a split and show the differences:
 
  \begin{Verbatim}[samepage=true]
  :edit main.c
  :vertical diffsplit main.c~ 
  \end{Verbatim}
 
-The "\verb!:vertical!" command is used to make the window split vertically.
+The "\texttt{:vertical}" command is used to make the window split vertically.
 If you omit this, you will get a horizontal split.
 
 If you have a patch or diff file, you can use the third way to start diff mode.
@@ -470,7 +470,7 @@ To update it use this command:
  \end{Verbatim}
 
 To remove a difference, you can move the text in a highlighted block from one window to another.
-Take the "\verb!main.c!" and "\verb!main.c~!" example above.
+Take the "\texttt{main.c}" and "\texttt{main.c~}" example above.
 Move the cursor to the left window, on the line that was deleted in the other window.
 Now type this command:
 
@@ -491,12 +491,12 @@ Now type this command:
 
 The change will now be removed by getting the text from the other window.
 Since there are no changes left now, Vim puts all text in a closed fold.
-"\verb!do!" stands for "diff obtain".
-"\verb!dg!" would have been better, but that already has a different meaning ("\verb!dgg!" deletes from the cursor until the first line).
+"\texttt{do}" stands for "diff obtain".
+"\texttt{dg}" would have been better, but that already has a different meaning ("\texttt{dgg}" deletes from the cursor until the first line).
 
-For details about diff mode, see |\verb!:h vimdiff!|.
+For details about diff mode, see |\texttt{:h vimdiff}|.
 \subsection{Various}
-The \verb!'laststatus'! option can be used to specify when the last window has a statusline:
+The \texttt{'laststatus'} option can be used to specify when the last window has a statusline:
 
 \begin{center}
 				\begin{longtable}{c l}
@@ -506,24 +506,24 @@ The \verb!'laststatus'! option can be used to specify when the last window has a
 				\end{longtable}
 \end{center}
 
-For Command-line commands this is done by prepending an "\verb!s!".
-For example: "\verb!:tag!" jumps to a tag, "\verb!:stag!" splits the window and jumps to a tag.
+For Command-line commands this is done by prepending an "\texttt{s}".
+For example: "\texttt{:tag}" jumps to a tag, "\texttt{:stag}" splits the window and jumps to a tag.
 
 For Normal mode commands a CTRL-W is prepended.
-\verb!CTRL-^! jumps to the alternate file, CTRL-W \verb!CTRL-^! splits the window and edits the alternate file.
+\texttt{CTRL-^} jumps to the alternate file, CTRL-W \texttt{CTRL-^} splits the window and edits the alternate file.
 
-The \verb!'splitbelow'! option can be set to make a new window appear below the current window.
-The \verb!'splitright'! option can be set to make a vertically split window appear right of the current window.
+The \texttt{'splitbelow'} option can be set to make a new window appear below the current window.
+The \texttt{'splitright'} option can be set to make a vertically split window appear right of the current window.
 
 When splitting a window you can prepend a modifier command to tell where the window is to appear:
 \begin{center}
 				\begin{longtable}{c l}
-								\verb!:leftabove {cmd}! & left or above the current window \\
-								\verb!:aboveleft {cmd}! & idem \\
-								\verb!:rightbelow {cmd}! & right or below the current window \\
-								\verb!:belowright {cmd}! & idem \\
-								\verb!:topleft {cmd}! & at the top or left of the Vim window \\
-								\verb!:botright {cmd}! & at the bottom or right of the Vim window \\
+								\texttt{:leftabove {cmd}} & left or above the current window \\
+								\texttt{:aboveleft {cmd}} & idem \\
+								\texttt{:rightbelow {cmd}} & right or below the current window \\
+								\texttt{:belowright {cmd}} & idem \\
+								\texttt{:topleft {cmd}} & at the top or left of the Vim window \\
+								\texttt{:botright {cmd}} & at the bottom or right of the Vim window \\
 				\end{longtable}
 \end{center}
 \subsection{Tab pages}
@@ -575,7 +575,7 @@ The result is
 						\end{Verbatim}
 
 Thus you can switch between tab pages by clicking on the label in the top line.
-If you don't have a mouse or don't want to use it, you can use the "\verb!gt!" command.
+If you don't have a mouse or don't want to use it, you can use the "\texttt{gt}" command.
 Mnemonic: Goto Tab.
 
 Now let's create another tab page with the command:
@@ -599,7 +599,7 @@ This makes a new tab page with one window that is editing the same buffer as the
     +-------------------------------------+
 \end{Verbatim}
 
-You can put "\verb!:tab!" before any Ex command that opens a window.
+You can put "\texttt{:tab}" before any Ex command that opens a window.
 The window will be opened in a new tab page.
 Another example:
 
@@ -607,7 +607,7 @@ Another example:
  :tab help gt
  \end{Verbatim}
 
-Will show the help text for "\verb!gt!" in a new tab page.
+Will show the help text for "\texttt{gt}" in a new tab page.
 
 A few more things you can do with tab pages:
 \begin{itemize}
@@ -618,5 +618,5 @@ A few more things you can do with tab pages:
 							\item [the "tabonly" command] Closes all tab pages except the current one.
 								Unless there are unsaved changes in other tab pages.
 \end{itemize}
-For more information about tab pages see |\verb!:h tab-page!|.
+For more information about tab pages see |\texttt{:h tab-page}|.
 \clearpage
