--- a/src/usr_11.tex
+++ b/src/usr_11.tex
@@ -3,10 +3,10 @@ Did your computer crash?  And you just spent hours editing?  Don't panic!  Vim
 stores enough information to be able to restore most of your work.  This
 chapter shows you how to get your work back and explains how the swap file is
 used.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1}
 \subsection{Basic recovery}
 In most cases recovering a file is quite simple, assuming you know which file you were editing (and the harddisk is still working).
-Start Vim on the file, with the "\verb!-r!" argument added:
+Start Vim on the file, with the "\texttt{-r}" argument added:
 
 \begin{Verbatim}[samepage=true]
  vim -r help.txt
@@ -59,7 +59,7 @@ It is safe to delete the swap file now.
 
 It is normal that the last few changes can not be recovered.
 Vim flushes the changes to disk when you don't type for about four seconds, or after typing about two hundred characters.
-This is set with the \verb!'updatetime'! and \verb!'updatecount'! options.
+This is set with the \texttt{'updatetime'} and \texttt{'updatecount'} options.
 Thus when Vim didn't get a chance to save itself when the system went down, the changes after the last flush will be lost.
 
 If you were editing without a file name, give an empty string as argument:
@@ -114,13 +114,13 @@ Example:
 \end{Verbatim}
 
 This is also handy when the swap file is in another directory than expected.
-Vim recognizes files with the pattern \verb!*.s[uvw][a-z]! as swap files.
+Vim recognizes files with the pattern \texttt{*.s[uvw][a-z]} as swap files.
 
 If this still does not work, see what file names Vim reports and rename the files accordingly.
-Check the \verb!'directory'! option to see where Vim may have put the swap file.
+Check the \texttt{'directory'} option to see where Vim may have put the swap file.
 
-\emph{Note}: Vim tries to find the swap file by searching the directories in the \verb!'dir'! option, looking for files that match "\verb!filename.sw?!".
-If wildcard expansion doesn't work (e.g., when the \verb!'shell'! option is invalid), Vim does a desperate try to find the file "\verb!filename.swp!".
+\emph{Note}: Vim tries to find the swap file by searching the directories in the \texttt{'dir'} option, looking for files that match "\texttt{filename.sw?}".
+If wildcard expansion doesn't work (e.g., when the \texttt{'shell'} option is invalid), Vim does a desperate try to find the file "\texttt{filename.swp}".
 If that fails too, you will have to give the name of the swapfile itself to be able to recover the file.
 \subsection{Crashed or not?}
 \label{ATTENTION}
@@ -260,19 +260,19 @@ Vim cannot always detect that a swap file already exists for a file.
 This is the case when the other edit session puts the swap files in another directory or when the path name for the file is different when editing it on different machines.
 Therefore, don't rely on Vim always warning you.
 
-If you really don't want to see this message, you can add the `\verb!A!' flag to the \verb!'shortmess'! option.
+If you really don't want to see this message, you can add the `\texttt{A}' flag to the \texttt{'shortmess'} option.
 But it's very unusual that you need this.
 
-For remarks about encryption and the swap file, see |\verb!:h :recover-crypt!|.
+For remarks about encryption and the swap file, see |\texttt{:h :recover-crypt}|.
 
 \subsection{Further reading}
-|\verb!:h swap-file!|    An explanation about where the swap file will be created and what its name is. \\
-|\verb!:h :preserve!|    Manually flushing the swap file to disk. \\
-|\verb!:h :swapname!|    See the name of the swap file for the current file. \\
-\verb!'updatecount'!  Number of key strokes after which the swap file is flushed to disk. \\
-\verb!'updatetime'!    Timeout after which the swap file is flushed to disk. \\
-\verb!'swapsync'!    Whether the disk is synced when the swap file is flushed. \\
-\verb!'directory'!  List of directory names where to store the swap file. \\
-\verb!'maxmem'!    Limit for memory usage before writing text to the swap file. \\
-\verb!'maxmemtot'!  Same, but for all files in total. \\
+|\texttt{:h swap-file}|    An explanation about where the swap file will be created and what its name is. \\
+|\texttt{:h :preserve}|    Manually flushing the swap file to disk. \\
+|\texttt{:h :swapname}|    See the name of the swap file for the current file. \\
+\texttt{'updatecount'}  Number of key strokes after which the swap file is flushed to disk. \\
+\texttt{'updatetime'}    Timeout after which the swap file is flushed to disk. \\
+\texttt{'swapsync'}    Whether the disk is synced when the swap file is flushed. \\
+\texttt{'directory'}  List of directory names where to store the swap file. \\
+\texttt{'maxmem'}    Limit for memory usage before writing text to the swap file. \\
+\texttt{'maxmemtot'}  Same, but for all files in total. \\
 \clearpage
