--- a/src/usr_21.tex
+++ b/src/usr_21.tex
@@ -2,12 +2,12 @@
 This chapter goes into mixing the use of other programs with Vim.
 Either by executing program from inside Vim or by leaving Vim and coming back later.
 Furthermore, this is about the ways to remember the state of Vim and restore it later.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1}
 \subsection{Suspend and resume}
 Like most Unix programs Vim can be suspended by pressing CTRL-Z.
 This stops Vim and takes you back to the shell it was started in.
 You can then do any other commands until you are bored with them.
-Then bring back Vim with the "\verb!fg!" command.
+Then bring back Vim with the "\texttt{fg}" command.
 
  CTRL-Z\\
  \{any sequence of shell commands\}\\
@@ -15,7 +15,7 @@ Then bring back Vim with the "\verb!fg!" command.
 
 You are right back where you left Vim, nothing has changed.
 
-In case pressing CTRL-Z doesn't work, you can also use "\verb!:suspend!".
+In case pressing CTRL-Z doesn't work, you can also use "\texttt{:suspend}".
 Don't forget to bring Vim back to the foreground, you would lose any changes that you made!
 
 Only Unix has support for this.
@@ -26,7 +26,7 @@ But it's a new shell, not the one that you started Vim from.
 When you are running the GUI you can't go back to the shell where Vim was started.
 CTRL-Z will minimize the Vim window instead.
 \subsection{Executing shell commands}
-To execute a single shell command from Vim use "\verb,:!{command},".
+To execute a single shell command from Vim use "\texttt{:!{command}}".
 For example, to see a directory listing:
 
 \begin{Verbatim}[samepage=true]
@@ -40,7 +40,7 @@ Vim will execute the program.
 When it ends you will get a prompt to hit <Enter>.
 This allows you to have a look at the output from the command before returning to the text you were editing.
 
-The "\verb:!:" is also used in other places where a program is run.
+The "\texttt{!}" is also used in other places where a program is run.
 Let's take a look at an overview:
 
 \begin{Verbatim}[samepage=true]
@@ -50,7 +50,7 @@ Let's take a look at an overview:
     :[range]!{program}  filter text through {program}
 \end{Verbatim}
 
-Notice that the presence of a range before "\verb:!{program}:" makes a big difference.
+Notice that the presence of a range before "\texttt{!{program}}" makes a big difference.
 Without it executes the program normally, with the range a number of text lines is filtered through the program.
 
 Executing a whole row of programs this way is possible.
@@ -66,7 +66,7 @@ The difference is that a new shell is started.
 
 When using the GUI the shell will be using the Vim window for its input and output.
 Since Vim is not a terminal emulator, this will not work perfectly.
-If you have trouble, try toggling the \verb!'guipty'! option.
+If you have trouble, try toggling the \texttt{'guipty'} option.
 If this still doesn't work well enough, start a new terminal to run the shell in.
 For example with:
 
@@ -90,7 +90,7 @@ The viminfo file is designed to store status information:
 Each time you exit Vim it will store this information in a file, the viminfo file.
 When Vim starts again, the viminfo file is read and the information restored.
 
-The \verb!'viminfo'! option is set by default to restore a limited number of items.
+The \texttt{'viminfo'} option is set by default to restore a limited number of items.
 You might want to set it to remember more information.
 This is done through the following command:
 
@@ -103,7 +103,7 @@ The syntax of this string is an option character followed by an argument.
 The option/argument pairs are separated by commas.
 
 Take a look at how you can build up your own viminfo string.
-First, the \verb!'! option is used to specify how many files for which you save marks (a-z).
+First, the \texttt{'} option is used to specify how many files for which you save marks (a-z).
 Pick a nice even number for this option (1000, for instance).
 Your command now looks like this:
 
@@ -120,7 +120,7 @@ You want this feature, so now you have this:
  :set viminfo='1000,f1
 \end{Verbatim}
 
-The \verb!<! option controls how many lines are saved for each of the registers.
+The \texttt{<} option controls how many lines are saved for each of the registers.
 By default, all the lines are saved.
 If 0, nothing is saved.
 To avoid adding thousands of lines to your viminfo file (which might never get used and makes starting Vim slower) you use a maximum of 500 lines:
@@ -131,18 +131,18 @@ To avoid adding thousands of lines to your viminfo file (which might never get u
  
 Other options you might want to use:
 \begin{center} \begin{longtable}{c l}
-				\verb!@! & number of lines to save from the input line history \\
-				\verb!:! & number of lines to save from the command line history \\
-				\verb!/! & number of lines to save from the search history \\
-				\verb!r! & removable media, for which no marks will be stored (can be used several times) \\
-				\verb!!! & global variables that start with an uppercase letter and don't contain lowercase letters \\
-				\verb!h! & disable \verb!'hlsearch'! highlighting when starting \\
-				\verb!%! & the buffer list (only restored when starting Vim without file arguments) \\
-				\verb!c! & convert the text using \verb!'encoding'! \\
-				\verb!n! & name used for the viminfo file (must be the last option) \\
+				\texttt{@} & number of lines to save from the input line history \\
+				\texttt{:} & number of lines to save from the command line history \\
+				\texttt{/} & number of lines to save from the search history \\
+				\texttt{r} & removable media, for which no marks will be stored (can be used several times) \\
+				\texttt{!} & global variables that start with an uppercase letter and don't contain lowercase letters \\
+				\texttt{h} & disable \texttt{'hlsearch'} highlighting when starting \\
+				\texttt{%} & the buffer list (only restored when starting Vim without file arguments) \\
+				\texttt{c} & convert the text using \texttt{'encoding'} \\
+				\texttt{n} & name used for the viminfo file (must be the last option) \\
 \end{longtable} \end{center}
 
-See the \verb!'viminfo'! option and |\verb!:h viminfo-file!| for more information.
+See the \texttt{'viminfo'} option and |\texttt{:h viminfo-file}| for more information.
 
 When you run Vim multiple times, the last one exiting will store its information.
 This may cause information that previously exiting Vims stored to be lost.
@@ -161,12 +161,12 @@ And you are right back where you left Vim.
 So you can get on with your work.
 
 Vim creates a mark each time you exit Vim.
-The last one is \verb!'0!.
-The position that \verb!'0! pointed to is made \verb!'1!.
-And \verb!'1! is made to \verb!'2!, and so forth.
-Mark \verb!'9! is lost.
+The last one is \texttt{'0}.
+The position that \texttt{'0} pointed to is made \texttt{'1}.
+And \texttt{'1} is made to \verb!'2!, and so forth.
+Mark \texttt{'9} is lost.
 
-The |\verb!:h :marks!| command is useful to find out where \verb!'0! to \verb!'9! will take you.
+The |\texttt{:h :marks}| command is useful to find out where \texttt{'0} to \texttt{'9} will take you.
 
 \subsubsection{Getting back to some file}
 If you want to go back to a file that you edited recently, but not when exiting Vim, there is a slightly more complicated way.
@@ -186,7 +186,7 @@ You type:
  :e #<2
 \end{Verbatim}
 
-Instead of "\verb!:e!" you can use any command that has a file name argument, the "\verb!#<2!" item works in the same place as "\verb!%!" (current file name) and "\verb!#!" (alternate file name).
+Instead of "\texttt{:e}" you can use any command that has a file name argument, the "\verb!#<2!" item works in the same place as "\texttt{%}" (current file name) and "\texttt{#}" (alternate file name).
 So you can also split the window to edit the third file:
 
 \begin{Verbatim}[samepage=true]
@@ -204,8 +204,8 @@ Fortunately there is a simpler way:
     -- More --
 \end{Verbatim}
 
-You get the same list of files as with |\verb!:h :oldfiles!|.
-If you want to edit "\verb!resume.txt!" first press "\verb!q!" to stop the listing.
+You get the same list of files as with |\texttt{:h :oldfiles}|.
+If you want to edit "\texttt{resume.txt}" first press "\texttt{q}" to stop the listing.
 You will get a prompt:
 
 \begin{Verbatim}[samepage=true]
@@ -214,9 +214,9 @@ You will get a prompt:
 
 Type "\verb!2!" and press <Enter> to edit the second file.
 
-More info at |\verb!:h :oldfiles!|, |\verb!:h v:oldfiles!| and |\verb!:h c_#<!|.
+More info at |\texttt{:h :oldfiles}|, |\texttt{:h v:oldfiles}| and |\texttt{:h c_#<}|.
 \subsubsection{Move info from one vim to another}
-You can use the "\verb!:wviminfo!" and "\verb!:rviminfo!" commands to save and restore the information while still running Vim.
+You can use the "\texttt{:wviminfo}" and "\texttt{:rviminfo}" commands to save and restore the information while still running Vim.
 This is useful for exchanging register contents between two instances of Vim, for example.
 In the first Vim do:
 
@@ -232,11 +232,11 @@ And in the second Vim do:
 
 Obviously, the "w" stands for "write" and the "r" for "read".
 
-The \verb:!: character is used by "\verb!:wviminfo!" to forcefully overwrite an existing file.
+The \texttt{!} character is used by "\texttt{:wviminfo}" to forcefully overwrite an existing file.
 When it is omitted, and the file exists, the information is merged into the file.
 
-The \verb:!: character used for "\verb!:rviminfo!" means that all the information is used, this may overwrite existing information.
-Without the \verb:!: only information that wasn't set is used.
+The \texttt{!} character used for "\texttt{:rviminfo}" means that all the information is used, this may overwrite existing information.
+Without the \texttt{!} only information that wasn't set is used.
 
 These commands can also be used to store info and use it again later.
 You could make a directory full of viminfo files, each containing info for a different purpose.
@@ -247,7 +247,7 @@ You can do this by saving your editing session and restoring it the next day.
 
 A Vim session contains all the information about what you are editing.
 This includes things such as the file list, window layout, global variables, options and other information.
-(Exactly what is remembered is controlled by the \verb!'sessionoptions'! option, described below.)
+(Exactly what is remembered is controlled by the \texttt{'sessionoptions'} option, described below.)
 
 The following command creates a session file:
 
@@ -268,12 +268,12 @@ If you want to start Vim and restore a specific session, you can use the followi
 \end{Verbatim}
 
 This tells Vim to read a specific file on startup.
-The \verb!'S'! stands for session (actually, you can source any Vim script with \verb!-S!, thus it might as well stand for "source").
+The \texttt{'S'} stands for session (actually, you can source any Vim script with \texttt{-S}, thus it might as well stand for "source").
 
 The windows that were open are restored, with the same position and size as before.
 Mappings and option values are like before.
 
-What exactly is restored depends on the \verb!'sessionoptions'! option.
+What exactly is restored depends on the \texttt{'sessionoptions'} option.
 
 The default value is `blank,buffers,curdir,folds,help,options,winsize'.
 
@@ -294,7 +294,7 @@ To also restore the size of the Vim window, for example, use:
 \end{Verbatim}
 \subsubsection{Session here, session there}
 The obvious way to use sessions is when working on different projects.
-Suppose you store you session files in the directory "\verb!~/.vim!".
+Suppose you store you session files in the directory "\texttt{~/.vim}".
 You are currently working on the "secret" project and have to switch to the "boring" project:
 
 \begin{Verbatim}[samepage=true]
@@ -303,8 +303,8 @@ You are currently working on the "secret" project and have to switch to the "bor
  :source ~/.vim/boring.vim
 \end{Verbatim}
 
-This first uses "\verb!:wall!" to write all modified files.
-Then the current session is saved, using "\verb!:mksession!!".
+This first uses "\texttt{:wall}" to write all modified files.
+Then the current session is saved, using "\texttt{:mksession!}".
 This overwrites the previous session.
 The next time you load the secret session you can continue where you were at this point.
 And finally you load the new "boring" session.
@@ -367,12 +367,12 @@ Now you can start Vim with this layout:
  vim -S ~/.vim/mine.vim
 \end{Verbatim}
 
-Hint: To open a file you see listed in the explorer window in the empty window, move the cursor to the filename and press "\verb!O!".
+Hint: To open a file you see listed in the explorer window in the empty window, move the cursor to the filename and press "\texttt{O}".
 Double clicking with the mouse will also do this.
 
 \subsubsection{Unix and ms-windows}
 Some people have to do work on MS-Windows systems one day and on Unix another day.
-If you are one of them, consider adding "\verb!slash!" and "\verb!unix!" to \verb!'sessionoptions'!.
+If you are one of them, consider adding "\texttt{slash}" and "\texttt{unix}" to \texttt{'sessionoptions'}.
 The session files will then be written in a format that can be used on both systems.
 This is the command to put in your vimrc file:
 
@@ -410,7 +410,7 @@ A session stores the looks of the whole of Vim.
 When you want to store the properties for one window only, use a view.
 
 The use of a view is for when you want to edit a file in a specific way.
-For example, you have line numbers enabled with the \verb!'number'! option and defined a few folds.
+For example, you have line numbers enabled with the \texttt{'number'} option and defined a few folds.
 Just like with sessions, you can remember this view on the file and restore it later.
 Actually, when you store a session, it stores the view of each window.
 
@@ -432,7 +432,7 @@ When you later edit the same file you get the view back with this command:
 
 That's easy, isn't it?
 
-Now you want to view the file without the \verb!'number'! option on, or with all folds open, you can set the options to make the window look that way.
+Now you want to view the file without the \texttt{'number'} option on, or with all folds open, you can set the options to make the window look that way.
 Then store this view with:
 
 \begin{Verbatim}[samepage=true]
@@ -445,7 +445,7 @@ Obviously, you can get this back with:
  :loadview 1
 \end{Verbatim}
 
-Now you can switch between the two views on the file by using "\verb!:loadview!" with and without the "\verb!1!" argument.
+Now you can switch between the two views on the file by using "\texttt{:loadview}" with and without the "\texttt{1}" argument.
 
 You can store up to ten views for the same file this way, one unnumbered and nine numbered 1 to 9.
 \subsubsection{A view with a name}
@@ -474,7 +474,7 @@ The solution for this situation is adding a modeline to the file.
 This is a line of text that tells Vim the values of options, to be used in this file only.
 
 A typical example is a C program where you make indents by a multiple of 4 spaces.
-This requires setting the \verb!'shiftwidth'! option to 4.
+This requires setting the \texttt{'shiftwidth'} option to 4.
 This modeline will do that:
 
 \begin{Verbatim}[samepage=true]
@@ -482,20 +482,20 @@ This modeline will do that:
 \end{Verbatim}
 
 Put this line as one of the first or last five lines in the file.
-When editing the file, you will notice that \verb!'shiftwidth'! will have been set to four.
+When editing the file, you will notice that \texttt{'shiftwidth'} will have been set to four.
 When editing another file, it's set back to the default value of eight.
 
 For some files the modeline fits well in the header, thus it can be put at the top of the file.
 For text files and other files where the modeline gets in the way of the normal contents, put it at the end of the file.
 
-The \verb!'modelines'! option specifies how many lines at the start and end of the file are inspected for containing a modeline.
+The \texttt{'modelines'} option specifies how many lines at the start and end of the file are inspected for containing a modeline.
 To inspect ten lines:
 
 \begin{Verbatim}[samepage=true]
  :set modelines=10
 \end{Verbatim}
 
-The \verb!'modeline'! option can be used to switch this off.
+The \texttt{'modeline'} option can be used to switch this off.
 Do this when you are working as root on Unix or Administrator on MS-Windows, or when you don't trust the files you are editing:
 
 \begin{Verbatim}[samepage=true]
@@ -508,15 +508,15 @@ Use this format for the modeline:
     any-text vim:set {option}={value} ... : any-text 
 \end{Verbatim}
 
-The "\verb!any-text!" indicates that you can put any text before and after the part that Vim will use.
+The "\texttt{any-text}" indicates that you can put any text before and after the part that Vim will use.
 This allows making it look like a comment, like what was done above with /* and */.
 
-The "\verb! vim:!" part is what makes Vim recognize this line.
-There must be white space before "\verb!vim!", or "\verb!vim!" must be at the start of the line.
-Thus using something like "\verb!gvim:!" will not work.
+The "\texttt{ vim:}" part is what makes Vim recognize this line.
+There must be white space before "\texttt{vim}", or "\texttt{vim}" must be at the start of the line.
+Thus using something like "\texttt{gvim:}" will not work.
 
-The part between the colons is a "\verb!:set!" command.
-It works the same way as typing the "\verb!:set!" command, except that you need to insert a backslash before a colon (otherwise it would be seen as the end of the modeline).
+The part between the colons is a "\texttt{:set}" command.
+It works the same way as typing the "\texttt{:set}" command, except that you need to insert a backslash before a colon (otherwise it would be seen as the end of the modeline).
 
 Another example:
 
@@ -524,8 +524,8 @@ Another example:
     // vim:set textwidth=72 dir=c\:\tmp:  use c:\tmp here 
 \end{Verbatim}
 
-There is an extra backslash before the first colon, so that it's included in the "\verb!:set!" command.
+There is an extra backslash before the first colon, so that it's included in the "\texttt{:set}" command.
 The text after the second colon is ignored, thus a remark can be placed there.
 
-For more details see |\verb!:h modeline!|.
+For more details see |\texttt{:h modeline}|.
 \clearpage
