--- a/src/usr_23.tex
+++ b/src/usr_23.tex
@@ -3,7 +3,7 @@ This chapter is about editing files that are not ordinary files.  With Vim you
 can edit files that are compressed or encrypted.  Some files need to be
 accessed over the internet.  With some restrictions, binary files can be
 edited as well.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1}
 \subsection{DOS, Mac and Unix files}
 Back in the early days, the old Teletype machines used two characters to start a new line.
 One to move the carriage back to the first position (carriage return, <CR>), another to move the paper up (line feed, <LF>).
@@ -17,7 +17,7 @@ The MS-DOS (and Microsoft Windows) folks decided to keep the old <CR><LF>.
 This means that if you try to move a file from one system to another, you have line-break problems.
 The Vim editor automatically recognizes the different file formats and handles things properly behind your back.
 
-The option \verb!'fileformats'! contains the various formats that will be tried when a new file is edited.
+The option \texttt{'fileformats'} contains the various formats that will be tried when a new file is edited.
 The following command, for example, tells Vim to try UNIX format first and MS-DOS format second:
 
 \begin{Verbatim}[samepage=true]
@@ -33,7 +33,7 @@ But when you edit a dos file, Vim will notify you of this:
     "/tmp/test" [dos] 3L, 71C 
 \end{Verbatim}
 
-For a Mac file you would see "\verb![mac]!".
+For a Mac file you would see "\texttt{[mac]}".
 
 The detected file format is stored in the 'fileformat' option.
 To see which format you have, execute the following command:
@@ -57,7 +57,7 @@ On the Macintosh, where <CR> is the line break character, it's possible to have 
 
 The result is that it's not possible to be 100\% sure whether a file containing both <CR> and <LF> characters is a Mac or a Unix file.
 Therefore, Vim assumes that on Unix you probably won't edit a Mac file, and doesn't check for this type of file.
-To check for this format anyway, add "\verb!mac!" to \verb!'fileformats'!:
+To check for this format anyway, add "\texttt{mac}" to \texttt{'fileformats'}:
 
 \begin{Verbatim}[samepage=true]
  :set fileformats+=mac
@@ -75,14 +75,14 @@ Suppose you do want to edit the file that way?  Then you need to overrule the fo
  :edit ++ff=unix file.txt
 \end{Verbatim}
 
-The "\verb!++!" string is an item that tells Vim that an option name follows, which overrules the default for this single command.
-"\verb!++ff!" is used for \verb!'fileformat'!.
-You could also use "\verb!++ff=mac!" or "\verb!++ff=dos!".
+The "\texttt{++}" string is an item that tells Vim that an option name follows, which overrules the default for this single command.
+"\texttt{++ff}" is used for \texttt{'fileformat'}.
+You could also use "\texttt{++ff=mac}" or "\texttt{++ff=dos}".
 
-This doesn't work for any option, only "\verb!++ff!" and "\verb!++enc!" are currently implemented.
-The full names "\verb!++fileformat!" and "\verb!++encoding!" also work.
+This doesn't work for any option, only "\texttt{++ff}" and "\texttt{++enc}" are currently implemented.
+The full names "\texttt{++fileformat}" and "\texttt{++encoding}" also work.
 \subsubsection{Conversion}
-You can use the \verb!'fileformat'! option to convert from one file format to another.
+You can use the \texttt{'fileformat'} option to convert from one file format to another.
 Suppose, for example, that you have an MS-DOS file named README.TXT that you want to convert to UNIX format.
 Start by editing the MS-DOS format file: vim README.TXT
 
@@ -133,20 +133,20 @@ Currently URLs with these formats are recognized:
 \end{Verbatim}
 
 Vim doesn't do the communication itself, it relies on the mentioned programs to be available on your computer.
-On most Unix systems "\verb!ftp!" and "\verb!rcp!" will be present.
-"\verb!scp!" and "\verb!wget!" might need to be installed.
+On most Unix systems "\texttt{ftp}" and "\texttt{rcp}" will be present.
+"\texttt{scp}" and "\texttt{wget}" might need to be installed.
 
-Vim detects these URLs for each command that starts editing a new file, also with "\verb!:edit!" and "\verb!:split!", for example.
-Write commands also work, except for \verb!http://!.
+Vim detects these URLs for each command that starts editing a new file, also with "\texttt{:edit}" and "\texttt{:split}", for example.
+Write commands also work, except for \texttt{http://}.
 
-For more information, also about passwords, see |\verb!:h netrw!|.
+For more information, also about passwords, see |\texttt{:h netrw}|.
 \subsection{Encryption}
 Some information you prefer to keep to yourself.
 For example, when writing a test on a computer that students also use.
 You don't want clever students to figure out a way to read the questions before the exam starts.
 Vim can encrypt the file for you, which gives you some protection.
 
-To start editing a new file with encryption, use the "\verb!-x!" argument to start Vim.
+To start editing a new file with encryption, use the "\texttt{-x}" argument to start Vim.
 Example:
 
 \begin{Verbatim}[samepage=true]
@@ -171,15 +171,15 @@ You can now edit this file normally and put in all your secrets.
 When you finish editing the file and tell Vim to exit, the file is encrypted and written.
 
 When you edit the file with Vim, it will ask you to enter the same key again.
-You don't need to use the "\verb!-x!" argument.
-You can also use the normal "\verb!:edit!" command.
+You don't need to use the "\texttt{-x}" argument.
+You can also use the normal "\texttt{:edit}" command.
 Vim adds a magic string to the file by which it recognizes that the file was encrypted.
 
 If you try to view this file using another program, all you get is garbage.
 Also, if you edit the file with Vim and enter the wrong key, you get garbage.
 Vim does not have a mechanism to check if the key is the right one (this makes it much harder to break the key).
 \subsubsection{Switching encryption on and off}
-To disable the encryption of a file, set the \verb!'key'! option to an empty string:
+To disable the encryption of a file, set the \texttt{'key'} option to an empty string:
 
 \begin{Verbatim}[samepage=true]
  :set key=
@@ -187,11 +187,11 @@ To disable the encryption of a file, set the \verb!'key'! option to an empty str
 
 The next time you write the file this will be done without encryption.
 
-Setting the \verb!'key'! option to enable encryption is not a good idea, because the password appears in the clear.
+Setting the \texttt{'key'} option to enable encryption is not a good idea, because the password appears in the clear.
 Anyone shoulder-surfing can read your password.
 
-To avoid this problem, the "\verb!:X!" command was created.
-It asks you for an encryption key, just like the "\verb!-x!" argument did:
+To avoid this problem, the "\texttt{:X}" command was created.
+It asks you for an encryption key, just like the "\texttt{-x}" argument did:
 
 \begin{Verbatim}[samepage=true]
  :X
@@ -206,7 +206,7 @@ Also you should be aware that the swap file is not encrypted; so while you are e
 
 One way to avoid letting people read your swap file is to avoid using one.
 If the -n argument is supplied on the command line, no swap file is used (instead, Vim puts everything in memory).
-For example, to edit the encrypted file "\verb!file.txt!" without a swap file use the following command:
+For example, to edit the encrypted file "\texttt{file.txt}" without a swap file use the following command:
 
 \begin{Verbatim}[samepage=true]
  vim -x -n file.txt
@@ -232,20 +232,20 @@ You can edit binary files with Vim.
 Vim wasn't really made for this, thus there are a few restrictions.
 But you can read a file, change a character and write it back, with the result that only that one character was changed and the file is identical otherwise.
 
-To make sure that Vim does not use its clever tricks in the wrong way, add the "\verb!-b!" argument when starting Vim:
+To make sure that Vim does not use its clever tricks in the wrong way, add the "\texttt{-b}" argument when starting Vim:
 
 \begin{Verbatim}[samepage=true]
  vim -b datafile
 \end{Verbatim}
 
-This sets the \verb!'binary'! option.
+This sets the \texttt{'binary'} option.
 The effect of this is that unexpected side effects are turned off.
-For example, \verb!'textwidth'! is set to zero, to avoid automatic formatting of lines.
+For example, \texttt{'textwidth'} is set to zero, to avoid automatic formatting of lines.
 And files are always read in Unix file format.
 
 Binary mode can be used to change a message in a program.
 Be careful not to insert or delete any characters, it would stop the program from working.
-Use "\verb!R!" to enter replace mode.
+Use "\texttt{R}" to enter replace mode.
 
 Many characters in the file will be unprintable.
 To see them in Hex format:
@@ -254,7 +254,7 @@ To see them in Hex format:
  :set display=uhex
 \end{Verbatim}
 
-Otherwise, the "\verb!ga!" command can be used to see the value of the character under the cursor.
+Otherwise, the "\texttt{ga}" command can be used to see the value of the character under the cursor.
 The output, when the cursor is on an <Esc>, looks like this:
 
 \begin{Verbatim}[samepage=true]
@@ -262,7 +262,7 @@ The output, when the cursor is on an <Esc>, looks like this:
 \end{Verbatim}
 
 There might not be many line breaks in the file.
-To get some overview switch the \verb!'wrap'! option off:
+To get some overview switch the \texttt{'wrap'} option off:
 
 \begin{Verbatim}[samepage=true]
  :set nowrap
@@ -282,8 +282,8 @@ The output is verbose:
 \end{Verbatim}
 
 The last two numbers are the byte position in the file and the total number of bytes.
-This takes into account how \verb!'fileformat'! changes the number of bytes that a line break uses.
-To move to a specific byte in the file, use the "\verb!go!" command.
+This takes into account how \texttt{'fileformat'} changes the number of bytes that a line break uses.
+To move to a specific byte in the file, use the "\texttt{go}" command.
 For example, to move to byte 2345:
 
 \begin{Verbatim}[samepage=true]
@@ -292,7 +292,7 @@ For example, to move to byte 2345:
 
 \subsubsection{Using xxd}
 A real binary editor shows the text in two ways: as it is and in hex format.
-You can do this in Vim by first converting the file with the "\verb!xxd!" program.
+You can do this in Vim by first converting the file with the "\texttt{xxd}" program.
 This comes with Vim.
 
 First edit the file in binary mode:
@@ -331,7 +331,7 @@ Changes in the printable text part on the right are ignored.
 See the manual page of xxd for more information.
 \subsection{Compressed files}
 This is easy: You can edit a compressed file just like any other file.
-The "\verb!gzip!" plugin takes care of decompressing the file when you edit it.
+The "\texttt{gzip}" plugin takes care of decompressing the file when you edit it.
 And compressing it again when you write it.
 
 These compression methods are currently supported:
