--- a/src/usr_25.tex
+++ b/src/usr_25.tex
@@ -2,7 +2,7 @@
 Text hardly ever comes in one sentence per line.
 This chapter is about breaking sentences to make them fit on a page and other formatting.
 Vim also has useful features for editing single-line paragraphs and tables.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1}
 \subsection{Breaking lines}
 Vim has a number of functions that make dealing with text easier.
 By default, the editor does not perform automatic line breaks.
@@ -10,7 +10,7 @@ In other words, you have to press <Enter> yourself.
 This is useful when you are writing programs where you want to decide where the line ends.
 It is not so good when you are creating documentation and want the text to be at most 70 character wide.
 
-If you set the \verb!'textwidth'! option, Vim automatically inserts line breaks.
+If you set the \texttt{'textwidth'} option, Vim automatically inserts line breaks.
 Suppose, for example, that you want a very narrow column of only 30 characters.
 You need to execute the following command:
 
@@ -26,7 +26,7 @@ Now you start typing (ruler added):
     I taught programming for a whi 
 \end{Verbatim}
 
-If you type "\verb!l!" next, this makes the line longer than the 30-character limit.
+If you type "\texttt{l}" next, this makes the line longer than the 30-character limit.
 When Vim sees this, it inserts a line break and you get the following:
 
 \begin{Verbatim}[samepage=true]
@@ -50,7 +50,7 @@ Continuing on, you can type in the rest of the paragraph:
 
 You do not have to type newlines; Vim puts them in automatically.
 
-\emph{Note}: The \verb!'wrap'! option makes Vim display lines with a line break, but this doesn't insert a line break in the file.
+\emph{Note}: The \texttt{'wrap'} option makes Vim display lines with a line break, but this doesn't insert a line break in the file.
 \subsubsection{Reformatting}
 The Vim editor is not a word processor.
 In a word processor, if you delete something at the beginning of the paragraph, the line breaks are reworked.
@@ -67,7 +67,7 @@ In Vim they are not; so if you delete the word "programming" from the first line
 \end{Verbatim}
 
 This does not look good.
-To get the paragraph into shape you use the "\verb!gq!" operator.
+To get the paragraph into shape you use the "\texttt{gq}" operator.
 
 Let's first use this with a Visual selection.
 Starting from the first line, type:
@@ -76,7 +76,7 @@ Starting from the first line, type:
  v4jgq
 \end{Verbatim}
 
-"\verb!v!" to start Visual mode, "\verb!4j!" to move to the end of the paragraph and then the "\verb!gq!" operator.
+"\texttt{v}" to start Visual mode, "\texttt{4j}" to move to the end of the paragraph and then the "\texttt{gq}" operator.
 The result is:
 
 \begin{Verbatim}[samepage=true]
@@ -89,24 +89,24 @@ The result is:
     story. 
 \end{Verbatim}
 
-\emph{Note}: there is a way to do automatic formatting for specific types of text layouts, see |\verb!:h auto-format!|.
+\emph{Note}: there is a way to do automatic formatting for specific types of text layouts, see |\texttt{:h auto-format}|.
 
-Since "\verb!gq!" is an operator, you can use one of the three ways to select the text it works on: With Visual mode, with a movement and with a text object.
+Since "\texttt{gq}" is an operator, you can use one of the three ways to select the text it works on: With Visual mode, with a movement and with a text object.
 
-The example above could also be done with "\verb!gq4j!".
+The example above could also be done with "\texttt{gq4j}".
 That's less typing, but you have to know the line count.
-A more useful motion command is "\verb!}!".
+A more useful motion command is "\texttt{}}".
 This moves to the end of a paragraph.
-Thus "\verb!gq}!" formats from the cursor to the end of the current paragraph.
+Thus "\texttt{gq}}" formats from the cursor to the end of the current paragraph.
 
-A very useful text object to use with "\verb!gq!" is the paragraph.
+A very useful text object to use with "\texttt{gq}" is the paragraph.
 Try this:
 
 \begin{Verbatim}[samepage=true]
  gqap
 \end{Verbatim}
 
-"\verb!ap!" stands for "a-paragraph".
+"\texttt{ap}" stands for "a-paragraph".
 This formats the text of one paragraph (separated by empty lines).
 Also the part before the cursor.
 
@@ -116,19 +116,19 @@ If you have your paragraphs separated by empty lines, you can format the whole f
  gggqG
 \end{Verbatim}
 
-"\verb!gg!" to move to the first line, "\verb!gqG!" to format until the last line.
+"\texttt{gg}" to move to the first line, "\texttt{gqG}" to format until the last line.
 
 Warning: If your paragraphs are not properly separated, they will be joined together.
 A common mistake is to have a line with a space or tab.
 That's a blank line, but not an empty line.
 
 Vim is able to format more than just plain text.
-See |\verb!:h fo-table!| for how to change this.
-See the \verb!'joinspaces'! option to change the number of spaces used after a full stop.
+See |\texttt{:h fo-table}| for how to change this.
+See the \texttt{'joinspaces'} option to change the number of spaces used after a full stop.
 
 It is possible to use an external program for formatting.
 This is useful if your text can't be properly formatted with Vim's builtin command.
-See the \verb!'formatprg'! option.
+See the \texttt{'formatprg'} option.
 \subsection{Aligning text}
 To center a range of lines, use the following command:
 
@@ -136,10 +136,10 @@ To center a range of lines, use the following command:
  :{range}center [width]
 \end{Verbatim}
 
-\verb!{range}! is the usual command-line range.
-\verb![width]! is an optional line width to use for centering.
-If \verb![width]! is not specified, it defaults to the value of \verb!'textwidth'!.
-(If \verb!'textwidth'! is 0, the default is 80.)
+\texttt{{range}} is the usual command-line range.
+\texttt{[width]} is an optional line width to use for centering.
+If \texttt{[width]} is not specified, it defaults to the value of \texttt{'textwidth'}.
+(If \texttt{'textwidth'} is 0, the default is 80.)
 
 For example:
 
@@ -157,7 +157,7 @@ results in the following:
 				     story. 
 \end{Verbatim}
 \subsubsection{Right alignment}
-Similarly, the "\verb!:right!" command right-justifies the text:
+Similarly, the "\texttt{:right}" command right-justifies the text:
 
 \begin{Verbatim}[samepage=true]
  :1,5right 37
@@ -179,7 +179,7 @@ Finally there is this command:
  :{range}left [margin]
 \end{Verbatim}
 
-Unlike "\verb!:center!" and "\verb!:right!", however, the argument to "\verb!:left!" is not the length of the line.
+Unlike "\texttt{:center}" and "\texttt{:right}", however, the argument to "\texttt{:left}" is not the length of the line.
 Instead it is the left margin.
 If it is omitted, the text will be put against the left side of the screen (using a zero margin would do the same).
 If it is 5, the text will be indented 5 spaces.
@@ -209,11 +209,11 @@ To use this package, execute the following command:
  :runtime macros/justify.vim
 \end{Verbatim}
 
-This Vim script file defines a new visual command "\verb!_j!".
-To justify a block of text, highlight the text in Visual mode and then execute "\verb!_j!".
+This Vim script file defines a new visual command "\texttt{_j}".
+To justify a block of text, highlight the text in Visual mode and then execute "\texttt{_j}".
 
 Look in the file for more explanations.
-To go there, do "\verb!gf!" on this name: \verb!$VIMRUNTIME/macros/justify.vim.!
+To go there, do "\texttt{gf}" on this name:\\ \texttt{$VIMRUNTIME/macros/justify.vim.}
 
 An alternative is to filter the text through an external program.
 Example:
@@ -235,7 +235,7 @@ text:
 
 This is entered by typing a tab, some text, <Enter>, tab and more text.
 
-The \verb!'autoindent'! option inserts indents automatically:
+The \texttt{'autoindent'} option inserts indents automatically:
 
 \begin{Verbatim}[samepage=true]
  :set autoindent
@@ -245,12 +245,12 @@ When a new line is started it gets the same indent as the previous line.
 In the above example, the tab after the <Enter> is not needed anymore.
 
 \subsubsection{Increasing indent}
-To increase the amount of indent in a line, use the "\verb!>!" operator.
-Often this is used as "\verb!>>!", which adds indent to the current line.
+To increase the amount of indent in a line, use the "\texttt{>}" operator.
+Often this is used as "\texttt{>>}", which adds indent to the current line.
 
-The amount of indent added is specified with the \verb!'shiftwidth'! option.
+The amount of indent added is specified with the \texttt{'shiftwidth'} option.
 The default value is 8.
-To make "\verb!>>!" insert four spaces worth of indent, for example, type this:
+To make "\texttt{>>}" insert four spaces worth of indent, for example, type this:
 
 \begin{Verbatim}[samepage=true]
  :set shiftwidth=4
@@ -263,11 +263,11 @@ When used on the second line of the example text, this is what you get:
         the second line 
 \end{Verbatim}
 
-"\verb!4>>!" will increase the indent of four lines.
+"\texttt{4>>}" will increase the indent of four lines.
 \subsubsection{Tabstop}
-If you want to make indents a multiple of 4, you set \verb!'shiftwidth'! to 4.
+If you want to make indents a multiple of 4, you set \texttt{'shiftwidth'} to 4.
 But when pressing a <Tab> you still get 8 spaces worth of indent.
-To change this, set the \verb!'softtabstop'! option:
+To change this, set the \texttt{'softtabstop'} option:
 
 \begin{Verbatim}[samepage=true]
  :set softtabstop=4
@@ -275,40 +275,40 @@ To change this, set the \verb!'softtabstop'! option:
 
 This will make the <Tab> key insert 4 spaces worth of indent.
 If there are already four spaces, a <Tab> character is used (saving seven characters in the file).
-(If you always want spaces and no tab characters, set the \verb!'expandtab'! option.)
+(If you always want spaces and no tab characters, set the \texttt{'expandtab'} option.)
 
-\emph{Note}: You could set the \verb!'tabstop'! option to 4.
-However, if you edit the file another time, with \verb!'tabstop'! set to the default value of 8, it will look wrong.
+\emph{Note}: You could set the \texttt{'tabstop'} option to 4.
+However, if you edit the file another time, with \texttt{'tabstop'} set to the default value of 8, it will look wrong.
 In other programs and when printing the indent will also be wrong.
-Therefore it is recommended to keep \verb!'tabstop'! at eight all the time.
+Therefore it is recommended to keep \texttt{'tabstop'} at eight all the time.
 That's the standard value everywhere.
 
 \subsubsection{Changing tabs}
 You edit a file which was written with a tabstop of 3.
 In Vim it looks ugly, because it uses the normal tabstop value of 8.
-You can fix this by setting \verb!'tabstop'! to 3.
+You can fix this by setting \texttt{'tabstop'} to 3.
 But you have to do this every time you edit this file.
 
 Vim can change the use of tabstops in your file.
-First, set \verb!'tabstop'! to make the indents look good, then use the "\verb!:retab!" command:
+First, set \texttt{'tabstop'} to make the indents look good, then use the "\texttt{:retab}" command:
 
 \begin{Verbatim}[samepage=true]
  :set tabstop=3
  :retab 8
 \end{Verbatim}
 
-The "\verb!:retab!" command will change \verb!'tabstop'! to 8, while changing the text such that it looks the same.
+The "\texttt{:retab}" command will change \texttt{'tabstop'} to 8, while changing the text such that it looks the same.
 It changes spans of white space into tabs and spaces for this.
 You can now write the file.
 Next time you edit it the indents will be right without setting an option.
 
-Warning: When using "\verb!:retab!" on a program, it may change white space inside a string constant.
+Warning: When using "\texttt{:retab}" on a program, it may change white space inside a string constant.
 Therefore it's a good habit to use "\verb!\t!" instead of a real tab.
 \subsection{Dealing with long lines}
 Sometimes you will be editing a file that is wider than the number of columns in the window.
 When that occurs, Vim wraps the lines so that everything fits on the screen.
 
-If you switch the \verb!'wrap'! option off, each line in the file shows up as one line on the screen.
+If you switch the \texttt{'wrap'} option off, each line in the file shows up as one line on the screen.
 Then the ends of the long lines disappear off the screen to the right.
 
 When you move the cursor to a character that can't be seen, Vim will scroll the text to show it.
@@ -338,7 +338,7 @@ The cursor will stay in the same place, but it's moved back into the visible tex
 \end{tabular} \end{center}
 
 Let's attempt to show this with one line of text.
-The cursor is on the "\verb!w!" of "which".
+The cursor is on the "\texttt{w}" of "which".
 The "current window" above the line indicates the text that is currently visible.
 The "window"s below the text indicate the text that is visible after the command left of it.
 
@@ -356,15 +356,15 @@ The "window"s below the text indicate the text that is visible after the command
 \end{Verbatim}
 
 \subsubsection{Moving with wrap off}
-When \verb!'wrap'! is off and the text has scrolled horizontally, you can use the following commands to move the cursor to a character you can see.
+When \texttt{'wrap'} is off and the text has scrolled horizontally, you can use the following commands to move the cursor to a character you can see.
 Thus text left and right of the window is ignored.
 These never cause the text to scroll:
 
 \begin{center} \begin{tabular}{c l}
-				\verb!g0! & to first visible character in this line \\
-				\verb!g^! & to first non-blank visible character in this line \\
-				\verb!gm! & to middle of this line \\
-				\verb!g$! & to last visible character in this line \\
+				\texttt{g0} & to first visible character in this line \\
+				\texttt{g^} & to first non-blank visible character in this line \\
+				\texttt{gm} & to middle of this line \\
+				\texttt{g$} & to last visible character in this line \\
 \end{tabular} \end{center}
 
 \begin{Verbatim}[samepage=true]
@@ -376,14 +376,14 @@ These never cause the text to scroll:
 \subsubsection{Breaking at words}
 \label{edit-no-break}
 When preparing text for use by another program, you might have to make paragraphs without a line break.
-A disadvantage of using \verb!'nowrap'! is that you can't see the whole sentence you are working on.
-When \verb!'wrap'! is on, words are broken halfway, which makes them hard to read.
+A disadvantage of using \texttt{'nowrap'} is that you can't see the whole sentence you are working on.
+When \texttt{'wrap'} is on, words are broken halfway, which makes them hard to read.
 
-A good solution for editing this kind of paragraph is setting the \verb!'linebreak'! option.
+A good solution for editing this kind of paragraph is setting the \texttt{'linebreak'} option.
 Vim then breaks lines at an appropriate place when displaying the line.
 The text in the file remains unchanged.
 
-Without \verb!'linebreak'! text might look like this:
+Without \texttt{'linebreak'} text might look like this:
 
 \begin{Verbatim}[samepage=true]
     +---------------------------------+
@@ -415,16 +415,16 @@ it looks like this:
 
 Related options:
 \begin{itemize}
-				\item \verb!'breakat'! specifies the characters where a break can be inserted.
-				\item \verb!'showbreak'! specifies a string to show at the start of broken line.
+				\item \texttt{'breakat'} specifies the characters where a break can be inserted.
+				\item \texttt{'showbreak'} specifies a string to show at the start of broken line.
 \end{itemize}
-Set \verb!'textwidth'! to zero to avoid a paragraph to be split.
+Set \texttt{'textwidth'} to zero to avoid a paragraph to be split.
 \subsubsection{Moving by visible lines}
-The "\verb!j!" and "\verb!k!" commands move to the next and previous lines.
+The "\texttt{j}" and "\texttt{k}" commands move to the next and previous lines.
 When used on a long line, this means moving a lot of screen lines at once.
 
-To move only one screen line, use the "\verb!gj!" and "\verb!gk!" commands.
-When a line doesn't wrap they do the same as "\verb!j!" and "\verb!k!".
+To move only one screen line, use the "\texttt{gj}" and "\texttt{gk}" commands.
+When a line doesn't wrap they do the same as "\texttt{j}" and "\texttt{k}".
 When the line does wrap, they move to a character displayed one line below or above.
 
 You might like to use these mappings, which bind these movement commands to the cursor keys:
@@ -445,9 +445,9 @@ That looks complicated.
 Let's break it up in pieces:
 
 \begin{center} \begin{tabular}{c l}
-				\verb!:g/./         ! & A "\verb!:global!" command that finds all lines that contain at least one character. \\
-				\verb!     ,/^$/    ! & A range, starting from the current line (the non-empty line) until an empty line. \\
-				\verb!          join! & The "\verb!:join!" command joins the range of lines together into one line. \\
+				\texttt{:g/./         } & A "\texttt{:global}" command that finds all lines that contain at least one character. \\
+				\texttt{     ,/^$/    } & A range, starting from the current line (the non-empty line) until an empty line. \\
+				\texttt{          join} & The "\texttt{:join}" command joins the range of lines together into one line. \\
 \end{tabular} \end{center}
 
 Starting with this text, containing eight lines broken at column 30:
@@ -495,7 +495,7 @@ Suppose you are editing a table with four columns:
 \end{Verbatim}
 
 You need to enter numbers in the third column.
-You could move to the second line, use "\verb!A!", enter a lot of spaces and type the text.
+You could move to the second line, use "\texttt{A}", enter a lot of spaces and type the text.
 
 For this kind of editing there is a special option:
 
@@ -513,8 +513,8 @@ Move the cursor by searching for the header of the last column:
  /test 3
 \end{Verbatim}
 
-Now press "\verb!j!" and you are right where you can enter the value for "\verb!input A!".
-Typing "\verb!0.693!" results in:
+Now press "\texttt{j}" and you are right where you can enter the value for "\texttt{input A}".
+Typing "\texttt{0.693}" results in:
 
 \begin{Verbatim}[samepage=true]
     nice table    test 1     test 2  test 3 
@@ -523,9 +523,9 @@ Typing "\verb!0.693!" results in:
 \end{Verbatim}
 
 Vim has automatically filled the gap in front of the new text for you.
-Now, to enter the next field in this column use "\verb!Bj!".
-"\verb!B!" moves back to the start of a white space separated word.
-Then "\verb!j!" moves to the place where the next field can be entered.
+Now, to enter the next field in this column use "\texttt{Bj}".
+"\texttt{B}" moves back to the start of a white space separated word.
+Then "\texttt{j}" moves to the place where the next field can be entered.
 
 \emph{Note}: You can move the cursor anywhere in the display, also beyond the end of a line.
 But Vim will not insert spaces there, until you insert a character in that position.
@@ -535,13 +535,13 @@ You want to add a column, which should be a copy of the third column and placed 
 Do this in seven steps:
 
 \begin{enumerate}
-\item Move the cursor to the left upper corner of this column, e.g., with "\verb!/test 3!".
+\item Move the cursor to the left upper corner of this column, e.g., with "\texttt{/test 3}".
 \item Press CTRL-V to start blockwise Visual mode.
 \item Move the cursor down two lines with "\verb!2j!".  You are now in "virtual space": the "input B" line of the "test 3" column.
-\item Move the cursor right, to include the whole column in the selection, plus the space that you want between the columns.  "\verb!9l!" should do it.
-\item Yank the selected rectangle with "\verb!y!".
+\item Move the cursor right, to include the whole column in the selection, plus the space that you want between the columns.  "\texttt{9l}" should do it.
+\item Yank the selected rectangle with "\texttt{y}".
 \item Move the cursor to "test 1", where the new column must be placed.
-\item Press "\verb!P!".
+\item Press "\texttt{P}".
 \end{enumerate}
 
 The result should be:
@@ -561,12 +561,12 @@ Go back to non-virtual cursor movements with:
 \end{Verbatim}
 
 \subsubsection{Virtual replace mode}
-The disadvantage of using \verb!'virtualedit'! is that it "feels" different.
+The disadvantage of using \texttt{'virtualedit'} is that it "feels" different.
 You can't recognize tabs or spaces beyond the end of line when moving the cursor around.
 Another method can be used: Virtual Replace mode.
 
 Suppose you have a line in a table that contains both tabs and other characters.
-Use "\verb!rx!" on the first tab:
+Use "\texttt{rx}" on the first tab:
 
 \begin{Verbatim}[samepage=true]
     inp     0.693   0.534   0.693 
@@ -579,7 +579,7 @@ Use "\verb!rx!" on the first tab:
 \end{Verbatim}
 
 The layout is messed up.
-To avoid that, use the "\verb!gr!" command:
+To avoid that, use the "\texttt{gr}" command:
 
 \begin{Verbatim}[samepage=true]
     inp     0.693   0.534   0.693 
@@ -591,12 +591,12 @@ To avoid that, use the "\verb!gr!" command:
     inpx    0.693   0.534   0.693 
 \end{Verbatim}
 
-What happens is that the "\verb!gr!" command makes sure the new character takes the right amount of screen space.
+What happens is that the "\texttt{gr}" command makes sure the new character takes the right amount of screen space.
 Extra spaces or tabs are inserted to fill the gap.
-Thus what actually happens is that a tab is replaced by "\verb!x!" and then blanks added to make the text after it keep its place.
+Thus what actually happens is that a tab is replaced by "\texttt{x}" and then blanks added to make the text after it keep its place.
 In this case a tab is inserted.
 
-When you need to replace more than one character, you use the "\verb!R!" command to go to Replace mode (see |\hyperref[Replace mode]{\texttt{Replace mode}}|).
+When you need to replace more than one character, you use the "\texttt{R}" command to go to Replace mode (see |\hyperref[Replace mode]{\texttt{Replace mode}}|).
 This messes up the layout and replaces the wrong characters:
 
 \begin{Verbatim}[samepage=true]
@@ -609,7 +609,7 @@ This messes up the layout and replaces the wrong characters:
     inp 0.78634 0.693 
 \end{Verbatim}
 
-The "\verb!gR!" command uses Virtual Replace mode.
+The "\texttt{gR}" command uses Virtual Replace mode.
 This preserves the layout:
 
 \begin{Verbatim}[samepage=true]
