--- a/src/usr_42.tex
+++ b/src/usr_42.tex
@@ -3,20 +3,20 @@ By now you know that Vim is very flexible.
 This includes the menus used in the GUI.
 You can define your own menu entries to make certain commands easily accessible.
 This is for mouse-happy users only.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1}
 \subsection{Introduction}
-The menus that Vim uses are defined in the file "\verb!$VIMRUNTIME/menu.vim!".
+The menus that Vim uses are defined in the file "\texttt{\$VIMRUNTIME/menu.vim}".
 If you want to write your own menus, you might first want to look through that file.
 
-To define a menu item, use the "\verb!:menu!" command.
+To define a menu item, use the "\texttt{:menu}" command.
 The basic form of this command is as follows:
 
 \begin{Verbatim}[samepage=true]
  :menu {menu-item} {keys}
 \end{Verbatim}
 
-The \verb!{menu-item}! describes where on the menu to put the item.
-A typical \verb!{menu-item}! is "\verb!File.Save!", which represents the item "\verb!Save!" under the "\verb!File!" menu.
+The \texttt{{menu-item}} describes where on the menu to put the item.
+A typical \texttt{{menu-item}} is\texttt{File.Save}", which represents the item "\texttt{Save}" under the "\texttt{File} "menu.
 A dot is used to separate the names.
 Example:
 
@@ -24,21 +24,21 @@ Example:
  :menu File.Save  :update<CR>
 \end{Verbatim}
 
-The "\verb!:update!" command writes the file when it was modified.
+The "\texttt{:update}" command writes the file when it was modified.
 
-You can add another level: "\verb!Edit.Settings.Shiftwidth!" defines a submenu "\verb!Settings!" under the "\verb!Edit!" menu, with an item "\verb!Shiftwidth!".
+You can add another level: "\texttt{Edit.Settings.Shiftwidth}" defines a submenu "\texttt{Settings}" under the "\texttt{Edit}" menu, with an item "\texttt{Shiftwidth}".
 You could use even deeper levels.
 Don't use this too much, you need to move the mouse quite a bit to use such an item.
 
-The "\verb!:menu!" command is very similar to the "\verb!:map!" command: the left side specifies how the item is triggered and the right hand side defines the characters that are executed.
-\verb!{keys}! are characters, they are used just like you would have typed them.
-Thus in Insert mode, when \verb!{keys}! is plain text, that text is inserted.
+The " "\texttt{:menu}" " command is very similar to the "\texttt{:map}" command: the left side specifies how the item is triggered and the right hand side defines the characters that are executed.
+\texttt{{keys}} are characters, they are used just like you would have typed them.
+Thus in Insert mode, when \texttt{{keys}} is plain text, that text is inserted.
 
 \subsubsection{Accelerators}
-The ampersand character (\verb!&!) is used to indicate an accelerator.
-For instance, you can use Alt-F to select "\verb!File!" and S to select "\verb!Save!".
-(The \verb!'winaltkeys'! option may disable this though!).
-Therefore, the \verb!{menu-item}! looks like "\verb!&File.&Save!".
+The ampersand character (\texttt{\&}) is used to indicate an accelerator.
+For instance, you can use Alt-F to select "\texttt{File}" and S to select "\texttt{Save}".
+(The \texttt{'winaltkeys'} option may disable this though!).
+Therefore, the \texttt{{menu-item}} looks like "\texttt{\&File.\&Save}".
 The accelerator characters will be underlined in the menu.
 
 You must take care that each key is used only once in each menu.
@@ -46,7 +46,7 @@ Otherwise you will not know which of the two will actually be used.
 Vim doesn't warn you for this.
 
 \subsubsection{Priorities}
-The actual definition of the \verb!File.Save! menu item is as follows:
+The actual definition of the \texttt{File.Save} menu item is as follows:
 
 \begin{Verbatim}[samepage=true]
  :menu 10.340 &File.&Save<Tab>:w  :confirm w<CR>
@@ -96,28 +96,28 @@ These are the priorities in the File menu:
 Notice that there is room in between the numbers.
 This is where you can insert your own items, if you really want to (it's often better to leave the standard menus alone and add a new menu for your own items).
 
-When you create a submenu, you can add another "\verb!.number!" to the priority.
-Thus each name in \verb!{menu-item}! has its priority number.
+When you create a submenu, you can add another "\texttt{.number}" to the priority.
+Thus each name in \texttt{{menu-item}} has its priority number.
 
 \subsubsection{Special characters}
-The \verb!{menu-item}! in this example is "\verb!&File.&Save<Tab>:w!".
-This brings up an important point: \verb!{menu-item}! must be one word.
-If you want to put a dot, space or tabs in the name, you either use the <> notation (<Space> and <Tab>, for instance) or use the backslash (\verb!\!) escape.
+The \texttt{{menu-item}} in this example is "\texttt{\&File.\&Save<Tab>:w}".
+This brings up an important point: \texttt{{menu-item}} must be one word.
+If you want to put a dot, space or tabs in the name, you either use the <> notation (<Space> and <Tab>, for instance) or use the backslash (\texttt{\\}) escape.
 
 \begin{Verbatim}[samepage=true]
  :menu 10.305 &File.&Do\ It\.\.\. :exit<CR>
 \end{Verbatim}
 
-In this example, the name of the menu item "\verb!Do It...!" contains a space and the command is "\verb!:exit<CR>!".
+In this example, the name of the menu item "\texttt{Do It...}" contains a space and the command is "\texttt{:exit<CR>}".
 
 The <Tab> character in a menu name is used to separate the part that defines the menu name from the part that gives a hint to the user.
 The part after the <Tab> is displayed right aligned in the menu.
-In the File.Save menu the name used is "\verb!&File.&Save<Tab>:w!".
-Thus the menu name is "\verb!File.Save!" and the hint is "\verb!:w!".
+In the File.Save menu the name used is "\texttt{\&File.\&Save<Tab>:w}".
+Thus the menu name is "\texttt{File.Save}" and the hint is "\texttt{:w}".
 
 \subsubsection{Separators}
-The separator lines, used to group related menu items together, can be defined by using a name that starts and ends in a '\verb!-!'.
-For example "\verb!-sep-!".
+The separator lines, used to group related menu items together, can be defined by using a name that starts and ends in a '\texttt{-}'.
+For example "\texttt{-sep-}".
 When using several separators the names must be different.
 Otherwise the names don't matter.
 
@@ -131,24 +131,24 @@ Example:
 \subsection{Menu commands}
 
 You can define menu items that exist for only certain modes.
-This works just like the variations on the "\verb!:map!" command:
+This works just like the variations on the "\texttt{:map}" command:
 \begin{center} \begin{tabular}{l l}
-				\verb!:menu! & Normal, Visual and Operator-pending mode \\
-				\verb!:nmenu! & Normal mode \\
-				\verb!:vmenu! & Visual mode \\
-				\verb!:omenu! & Operator-pending mode \\
-				\verb!:menu!! & Insert and Command-line mode \\
-				\verb!:imenu! & Insert mode \\
-				\verb!:cmenu! & Command-line mode \\
-				\verb!:amenu! & All modes \\
+				\texttt{:menu} & Normal, Visual and Operator-pending mode \\
+				\texttt{:nmenu} & Normal mode \\
+				\texttt{:vmenu} & Visual mode \\
+				\texttt{:omenu} & Operator-pending mode \\
+				\texttt{:menu!} & Insert and Command-line mode \\
+				\texttt{:imenu} & Insert mode \\
+				\texttt{:cmenu} & Command-line mode \\
+				\texttt{:amenu} & All modes \\
 \end{tabular} \end{center}
-To avoid that the commands of a menu item are being mapped, use the command "\verb!:noremenu!", "\verb!:nnoremenu!", "\verb!:anoremenu!", etc.
+To avoid that the commands of a menu item are being mapped, use the command "\texttt{:noremenu}", "\texttt{:nnoremenu}", "\texttt{:anoremenu}", etc.
 
 \subsubsection{Using :amenu}
-The "\verb!:amenu!" command is a bit different.
-It assumes that the \verb!{keys}! you give are to be executed in Normal mode.
+The "\texttt{:amenu}" command is a bit different.
+It assumes that the \texttt{{keys}} you give are to be executed in Normal mode.
 When Vim is in Visual or Insert mode when the menu is used, Vim first has to go back to Normal mode.
-"\verb!:amenu!" inserts a CTRL-C or CTRL-O for you.
+"\texttt{:amenu}" inserts a CTRL-C or CTRL-O for you.
 For example, if you use this command:
 
 \begin{Verbatim}[samepage=true]
@@ -158,12 +158,12 @@ For example, if you use this command:
 Then the resulting menu commands will be:
 
 \begin{center} \begin{tabular}{l l}
-				\verb!Normal mode:! & * \\
-				\verb!Visual mode:! & CTRL-C * \\
-				\verb!Operator-pending mode:! & CTRL-C * \\
-				\verb!Insert mode:! & CTRL-O * \\
-				\verb!Command-line mode:! & CTRL-C * \\
-\endtabular} \end{center}
+				\texttt{Normal mode:} & * \\
+				\texttt{Visual mode:} & CTRL-C * \\
+				\texttt{Operator-pending mode:} & CTRL-C * \\
+				\texttt{Insert mode:} & CTRL-O * \\
+				\texttt{Command-line mode:} & CTRL-C * \\
+\end{tabular} \end{center}
 
 When in Command-line mode the CTRL-C will abandon the command typed so far.
 In Visual and Operator-pending mode CTRL-C will stop the mode.
@@ -181,17 +181,17 @@ Example:
  :endfunction
 \end{Verbatim}
 
-This menu entry goes to the next file in the argument list with "\verb!:next!".
-Then it searches for the line that starts with "\verb!Code!".
+This menu entry goes to the next file in the argument list with "\texttt{:next}".
+Then it searches for the line that starts with "\texttt{Code}".
 
 The <SID> before the function name is the script ID.
 This makes the function local to the current Vim script file.
 This avoids problems when a function with the same name is defined in another script file.
-See |\verb!:h <SID>!|.
+See |\texttt{:h <SID>}|.
 
 \subsubsection{Silent menus}
-The menu executes the \verb!{keys}! as if you typed them.
-For a "\verb!:!" command this means you will see the command being echoed on the command line.
+The menu executes the \texttt{{keys}} as if you typed them.
+For a "\texttt{:}" command this means you will see the command being echoed on the command line.
 If it's a long command, the hit-Enter prompt will appear.
 That can be very annoying!
 
@@ -204,19 +204,19 @@ When you use this menu, you will see this on the command line:
     :call <SNR>34_NextFile() 
 \end{Verbatim}
 
-To avoid this text on the command line, insert "\verb!<silent>!" as the first argument:
+To avoid this text on the command line, insert "\texttt{<silent>}" as the first argument:
 
 \begin{Verbatim}[samepage=true]
  :amenu <silent> Mine.Next\ File :call <SID>NextFile()<CR>
 \end{Verbatim}
 
-Don't use "\verb!<silent>!" too often.
+Don't use "\texttt{<silent>}" too often.
 It is not needed for short commands.
 If you make a menu for someone else, being able the see the executed command will give him a hint about what he could have typed, instead of using the mouse.
 
 \subsubsection{Listing menus}
-When a menu command is used without a \verb!{keys}! part, it lists the already defined menus.
-You can specify a \verb!{menu-item},! or part of it, to list specific menus.
+When a menu command is used without a \texttt{{keys}} part, it lists the already defined menus.
+You can specify a \texttt{{menu-item},} or part of it, to list specific menus.
 Example:
 
 \begin{Verbatim}[samepage=true]
@@ -230,7 +230,7 @@ That's a long list!  Better specify the name of a menu to get a shorter list:
  :amenu Edit
 \end{Verbatim}
 
-This lists only the "\verb!Edit!" menu items for all modes.
+This lists only the "\texttt{Edit}" menu items for all modes.
 To list only one specific menu item for Insert mode:
 
 \begin{Verbatim}[samepage=true]
@@ -239,13 +239,13 @@ To list only one specific menu item for Insert mode:
 
 Take care that you type exactly the right name.
 Case matters here.
-But the '\verb!&!' for accelerators can be omitted.
+But the '\texttt{\&}' for accelerators can be omitted.
 The <Tab> and what comes after it can be left out as well.
 
 \subsubsection{Deleting menus}
-To delete a menu, the same command is used as for listing, but with "\verb!menu!" changed to "\verb!unmenu!".
-Thus "\verb!:menu!" becomes, "\verb!:unmenu!", "\verb!:nmenu!" becomes "\verb!:nunmenu!", etc.
-To delete the "\verb!Tools.Make!" item for Insert mode:
+To delete a menu, the same command is used as for listing, but with "\texttt{menu}" changed to "\texttt{unmenu}".
+Thus "\texttt{:menu}" becomes, "\texttt{:unmenu}", "\texttt{:nmenu}" becomes "\texttt{:nunmenu}", etc.
+To delete the "\texttt{Tools.Make}" item for Insert mode:
 
 \begin{Verbatim}[samepage=true]
  :iunmenu Tools.Make
@@ -260,19 +260,19 @@ Example:
 
 This deletes the Syntax menu and all the items in it.
 \subsection{Various}
-You can change the appearance of the menus with flags in \verb!'guioptions'!.
-In the default value they are all included, except "\verb!M!".
+You can change the appearance of the menus with flags in \texttt{'guioptions'}.
+In the default value they are all included, except "\texttt{M}".
 You can remove a flag with a command like:
 
 \begin{Verbatim}[samepage=true]
  :set guioptions-=m
 \end{Verbatim}
  
-\begin{center} \begin{tabularx}{l X}
-				\verb!m! & When removed the menubar is not displayed. \\
-				\verb!M! & When added the default menus are not loaded. \\
-				\verb!g! & When removed the inactive menu items are not made grey but are completely removed.  (Does not work on all systems.) \\
-				\verb!t! & When removed the tearoff feature is not enabled. \\
+\begin{center} \begin{tabularx} {0.75\textwidth} {l X}
+				\texttt{m} & When removed the menubar is not displayed. \\
+				\texttt{M} & When added the default menus are not loaded. \\
+				\texttt{g} & When removed the inactive menu items are not made grey but are completely removed.  (Does not work on all systems.) \\
+				\texttt{t} & When removed the tearoff feature is not enabled. \\
 \end{tabularx} \end{center}
 
 The dotted line at the top of a menu is not a separator line.
@@ -280,34 +280,34 @@ When you select this item, the menu is "teared-off": It is displayed in a separa
 This is called a tearoff menu.
 This is useful when you use the same menu often.
 
-For translating menu items, see |\verb!:h :menutrans!|.
+For translating menu items, see |\texttt{:h :menutrans}|.
 
-Since the mouse has to be used to select a menu item, it is a good idea to use the "\verb!:browse!" command for selecting a file.
-And "\verb!:confirm!" to get a dialog instead of an error message, e.g., when the current buffer contains changes.
+Since the mouse has to be used to select a menu item, it is a good idea to use the "\texttt{:browse}" command for selecting a file.
+And "\texttt{:confirm}" to get a dialog instead of an error message, e.g., when the current buffer contains changes.
 These two can be combined:
 
 \begin{Verbatim}[samepage=true]
  :amenu File.Open  :browse confirm edit<CR>
 \end{Verbatim}
 
-The "\verb!:browse!" makes a file browser appear to select the file to edit.
-The "\verb!:confirm!" will pop up a dialog when the current buffer has changes.
+The "\texttt{:browse}" makes a file browser appear to select the file to edit.
+The "\texttt{:confirm}" will pop up a dialog when the current buffer has changes.
 You can then select to save the changes, throw them away or cancel the command.
 
-For more complicated items, the \verb!confirm()! and \verb!inputdialog()! functions can be used.
+For more complicated items, the \texttt{confirm()} and \texttt{inputdialog()} functions can be used.
 The default menus contain a few examples.
 \subsection{Toolbar and popup menus}
 There are two special menus: ToolBar and PopUp.
 Items that start with these names do not appear in the normal menu bar.
 
 \subsubsection{Toolbar}
-The toolbar appears only when the "\verb!T!" flag is included in the \verb!'guioptions'! option.
+The toolbar appears only when the "\texttt{T}" flag is included in the \texttt{'guioptions'} option.
 
 The toolbar uses icons rather than text to represent the command.
-For example, the \verb!{menu-item}! named "\verb!ToolBar.New!" causes the "\verb!New!" icon to appear on the toolbar.
+For example, the \texttt{{menu-item}} named "\texttt{ToolBar.New}" causes the "\texttt{New}" icon to appear on the toolbar.
 
 The Vim editor has 28 built-in icons.
-You can find a table here: |\verb!:h builtin-tools!|.
+You can find a table here: |\texttt{:h builtin-tools}|.
 Most of them are used in the default toolbar.
 You can redefine what these items do (after the default menus are setup).
 
@@ -321,17 +321,17 @@ For example, define a new toolbar item with:
 \end{Verbatim}
 
 Now you need to create the icon.
-For MS-Windows it must be in bitmap format, with the name "\verb!Compile.bmp!".
-For Unix XPM format is used, the file name is "\verb!Compile.xpm!".
+For MS-Windows it must be in bitmap format, with the name "\texttt{Compile.bmp}".
+For Unix XPM format is used, the file name is "\texttt{Compile.xpm}".
 The size must be 18 by 18 pixels.
 On MS-Windows other sizes can be used as well, but it will look ugly.
 
-Put the bitmap in the directory "\verb!bitmaps!" in one of the directories from \verb!'runtimepath'!.
-E.g., for Unix "\verb!~/.vim/bitmaps/Compile.xpm!".
+Put the bitmap in the directory "\texttt{bitmaps}" in one of the directories from \texttt{'runtimepath'}.
+E.g., for Unix "\texttt{~/.vim/bitmaps/Compile.xpm}".
 
 You can define tooltips for the items in the toolbar.
 A tooltip is a short text that explains what a toolbar item will do.
-For example "\verb!Open file!".
+For example "\texttt{Open file}".
 It appears when the mouse pointer is on the item, without moving for a moment.
 This is very useful if the meaning of the picture isn't that obvious.
 Example:
@@ -341,11 +341,11 @@ Example:
 \end{Verbatim}
  
 \emph{Note}: Pay attention to the case used.
-"\verb!Toolbar!" and "\verb!toolbar!" are different from "\verb!ToolBar!"!
+"\texttt{Toolbar}" and "\texttt{toolbar}" are different from "\texttt{ToolBar}"
 
-To remove a tooltip, use the |\verb!:h :tunmenu!| command.
+To remove a tooltip, use the |\texttt{:h :tunmenu}| command.
 
-The \verb!'toolbar'! option can be used to display text instead of a bitmap, or both text and a bitmap.
+The \texttt{'toolbar'} option can be used to display text instead of a bitmap, or both text and a bitmap.
 Most people use just the bitmap, since the text takes quite a bit of space.
 
 \subsubsection{Popup menu}
@@ -354,8 +354,9 @@ On MS-Windows you activate it by clicking the right mouse button.
 Then you can select an item with the left mouse button.
 On Unix the popup menu is used by pressing and holding the right mouse button.
 
-The popup menu only appears when the \verb!'mousemodel'! has been set to "\verb!popup!" or "\verb!popup_setpos!".
-The difference between the two is that "\verb!popup_setpos!" moves the cursor to the mouse pointer position.
+The popup menu only appears when the \texttt{'mousemodel'} has been set to
+"\texttt{popup}" or "\texttt{popup\_setpos}".  The difference between the two is
+that "\texttt{popup\_setpos}" moves the cursor to the mouse pointer position.
 When clicking inside a selection, the selection will be used unmodified.
 When there is a selection but you click outside of it, the selection is removed.
 
