--- a/src/usr_45.tex
+++ b/src/usr_45.tex
@@ -2,7 +2,7 @@
 The messages in Vim can be given in several languages.
 This chapter explains how to change which one is used.
 Also, the different ways to work with files in various languages is explained.
-\localtableofcontentswithrelativedepth{+1}
+%\localtableofcontentswithrelativedepth{+1}
 \subsection{Language for Messages}
 When you start Vim, it checks the environment to find out what language you are using.
 Mostly this should work fine, and you get the messages in your language (if they are available).
